Write draft of the fourth scene

--- a/_drafts/04_VR空間.md
+++ b/_drafts/04_VR空間.md
@@ -1,4 +1,4 @@
-　次の日、ぼくはまた熱を出して学校を休んだ。そして、その次の日にはさらに悪化して、結局いつものように入院することになった。
+病室にて　次の日、ぼくはまた熱を出して学校を休んだ。そして、その次の日にはさらに悪化して、結局いつものように入院することになった。
 
 　高熱にうなされながら、ケイに言われたことを考えた。心と体は密接につながっている。たしかに、こうして体が弱っていると、心も弱気になってくる。ぼくはまた、自分の体に嫌気がさしていた。いまさらサイボーグになりたいなんて言わないけれど、やっぱりこの不自由な体を、丈夫で健康な体に取り替えたいと思う。そうすれば、心も強くなれるだろうか？　いや、逆かもしれない。心を強く持たないと、体だって強くならないのかもしれない……。
 
@@ -10,24 +10,24 @@
 
 　ぼくは、オーケーの絵文字を返す。ちょうど、ミノルに聞きたいこともあった。
 
-　夕方、ぼくはミノルに会う準備をする。新しいチャットルームを作成して、ミノルにアドレスを送った。そして、手袋式のハンドコントローラをつけ、ＶＲヘッドセットを装着して、ミノルが来るのを待つ。病室にうんざりしていたぼくは、ＶＲチャットルームの内装を陽の光が入るおしゃれなカフェに設定した。店員や他の客もいるが、それらはすべてＮＰＣ（ノンプレイヤーキャラクター）だ。
+　夕方、ぼくはミノルに会う準備をする。新しいチャットルームを作成して、ミノルにアドレスを送った。そして、手袋式のハンドコントローラをつけ、ＶＲヘッドセットを装着して、ミノルが来るのを待つ。病室にうんざりしていたぼくは、ＶＲチャットルームの内装をまぶしいくらいの陽光が入るおしゃれなカフェに設定した。店員や他の客もいるが、それらはすべてＮＰＣだ。
 
 　むかしはぼくが入院するたび、ミノルが病室までお見舞いに来てくれていた。けれど、ぼくがあまりに何度も入院するので、いつしかこの形に落ち着いた。物理的な病室ではなく、インターネットに用意したヴァーチャル空間にお見舞いに来てもらうのである。ミノルも病室まで来る手間が省けるし、ぼくもやつれた姿を気にする必要がない。
 
 　ミノルが、カフェの扉を開けて入ってきた。ミノルのアバターはアメコミのヒーロースタイルで、ボディビルダーのような筋肉をしている。ぼくを見つけると、向かいに座った。
 「今回はどう？」ミノルの声はいつもより少し低い。声にピッチシフトのエフェクトをかけて、男性らしい声になるよう設定しているのだ。
-「いつもと同じ。もう大丈夫」ぼくの声は、いつもと変わらない。アバターは中学の時に好きだったアニメのキャラクターをモチーフにしたもので、そのキャラクターはサイボーグだった。
+「いつもと同じ。もう大丈夫」ぼくの声は、普段と変わらない。アバターは中学の時に好きだったアニメのキャラクターをモチーフにしたもので、そのキャラクターはサイボーグだった。
 
 　それからは、普段一緒に登校するときと同じように、学校であったことや、最近見たビデオ、ハマってるゲームの話なんかをした。ＶＲチャットの便利な点は、視覚情報をその場で楽に共有できることだ。現実だとモバイルデバイスの小さいディスプレイを一緒にのぞくことになるが、ここでは好きなサイズの画面を空間の任意の場所に広げることができる。
 
-　一通りのことを話し終えて、次の話題を探すための間が生まれた。ぼくは、考えていた質問をミノルに聞くことを考える。でも、どうやってその話を切り出せばいいかわからなかった。それは、僕が普段避けている話題だったし、下手に話せばミノルをを傷つけることになるかもしれない。いつもなら何も考えずに話せるのに、言葉が頭の中で渦を巻いて形にならなかった。現実世界でぼくはつばを飲み込む。ハンドコントローラの手汗の気持ち悪さが無性に気になった。
+　一通りのことを話し終えて、次の話題を探すための間が生まれた。ぼくは、考えていた質問をミノルに聞くことを考える。でも、どうやってその話を切り出せばいいかわからなかった。それは、僕が普段避けている話題だったし、下手に話せばミノルをを傷つけることになるかもしれない。いつもなら何も考えずに話せるのに、言葉が頭の中で渦を巻いて形にならなかった。現実世界でぼくはつばを飲み込む。ハンドコントローラの手汗が気持ち悪さが無性に気になった。
 
-「まだ調子悪い？」ミノルがいっそう低い声でいった。
+「……まだ調子悪い？」ミノルがいった。
 「いや、そんなことないよ。どうして？」現実世界の様子を見抜かれて驚いたぼくは、反射的に否定した。元気に聞こえるように努めたけれど、かえってわざとらしかったかもしれない。
 「どこかうわの空な感じだし、なんとなく。こういう時、現実だったら顔を見ればわかるんだけど、ＶＲアバターは無表情だからなあ……」そう言いながらミノルのアバターが、両手を広げて頭の高さまで上げ、唇を結び眉間にシワを寄せて顔を振った。〈困った・お手上げ〉のジェスチャーだ。言ってる内容とのギャップに、ぼくは笑った。ミノルもぼくの反応を見て笑う。
 
 「実は、ミノルに聞きたいことがあるんだ……」緊張が途切れると、自然と言葉がでてきた。
-「なんだい？」
+「なに？」
 
 　ぼくは、一度深呼吸した。その音が聞こえたのだろう。ミノルがインターネットの向こうで身構えるのが分かる。
 
@@ -45,33 +45,33 @@
 
 「同じとは思わないけど、ぼくも小さい頃、大きくなれば体が良くなると思ってた……」当時を思い出して、ぼくがいった。
 
-「うん。そんなだったから、二次性徴がきたときは絶望だった。それに気づいた時ほど、自分の体が嫌だったことはない……。それで、――ヒロトに話したことはなかったけど――中学に入った頃から二次性徴を抑制する治療を始めたんだ。親や医者と相談して、もうすぐホルモン療法も始めることになってる。体を変えたいって思うだけじゃなく、ぼくはすでに自分の体を変えつつあるんだ。サイボーグみたいに外科的なものじゃないけどね」
+「うん。そんなだったから、二次性徴がきたときは絶望だった。それに気づいた時ほど、自分の体が嫌だったことはない……。それで、――ヒロトに話したことはなかったけど――中学に入った頃から二次性徴を抑制する治療を始めたんだ。親や医者と相談して、もうすぐホルモン療法も始めることになってる。――体を変えたいって思うだけじゃなく、ぼくはすでに自分の体を変えつつあるんだ。サイボーグみたいに外科的なものじゃないけどね」
 
-　ぼくは驚いた。ミノルに悩んでいたことも、そんな治療をはじめていることも、何も気づいていなかった。本当にミノルのことを何も知らなかったのだとわかって、ショックだった。たしかに、ミノルの体は、同年代の女性に比べれば、胸も出ていないし体の丸みもない。ただ、ミノルが男であることがあまりに当たり前で、体が女性であることは知ってはいても、そういうものかと思っていた。ちょっと考えればそんなはずないのに、今まで思いもよらなかった。
+　ショックだった。ミノルがそんな悩みを持っていたことも、そんな治療をはじめていたことも、何も気づいていなかった。本当にミノルのことを何も知らなかったのだ。たしかに、ミノルの体は、同年代の女性に比べれば、胸も出ていないし体の丸みもない。ただ、ミノルが男であることがあまりに当たり前で、体が女性であることは知ってはいても、そういうものかと思っていた。ちょっと考えればそんなはずないのに、今まで思いもよらなかった。
 「知らなかった……」ぼくは、言葉を絞り出した。
 
 「知らなくて当然さ。学校の友達には絶対に知られたくなかったし、知られないようにしてた。特に、ヒロトには気づかれないよう、かなり気を使ってた」
 
-「そうだったんだ……」
+「そうだったんだ……」自分の鈍さがうとましかった。
 
-「――でも、話せてすっきりした。昔は絶対知られたくないと思ってたけど、最近は何か隠し事してるみたいでいやだったんだ。聞いてくれてよかった……」
+「――でも、話せてすっきりしたよ。昔は絶対知られたくないと思ってたけど、最近は何か隠し事してるみたいでいやだったんだ。聞いてくれてよかった……。今さらこんな事言うのもなんだけど――ぼくに何があっても、同性の友達として変わらず接してくれるヒロトには感謝してる……」
 
-　ミノルの声は、少し震えていた。やっぱり、話しにくいことに違いなかったのだ。はじめは平静を装っていたけど、最後に少し緩んだのだろう。ぼくは、今までのように気づかないふりをした。
+　ミノルの声はだんだん小さくなって、最後は少し震えていた。やっぱり、話しにくいことに違いなかったのだ。はじめは平静を装っていたけど、話し終えて少し気が緩んだのだろう。ぼくは、今までのように、ミノルの変化に気づかないふりをした。
 
-「うん……」声を出して、自分でも驚いた。ミノルと同じように、ぼくの声も震えていた。視界も少しゆがんでいることに気づく。ＶＲ空間越しでよかった。目をこするところをミノルに見られることはない。もしかしたら、ミノルも同じことを思っているかもしれない。
+「うん……」声を出して、自分でも驚いた。ミノルと同じように、ぼくの声も震えていた。視界も少しゆがんでいることに気づく。ＶＲ空間越しでよかった。目をこすっても、ミノルに見られることはない。――もしかしたら、ミノルも同じことを思っているかもしれない。
 
-「でも、どうして急にそんなこと聞こうと思ったの？」もうミノルの声は震えていなかった。ぼくも切り替えるように努める。
+　少しのあいだ、ぼくらは二人とも押し黙った。それは、必要な沈黙だった。
+
+「――でも、どうして急にそんなこと聞こうと思ったの？」ミノルが口を開く。その声は、もう震えていなかった。ぼくも切り替えるように努める。
 
 「ケイに言われたことがきっかけだったんだ……」ぼくはそういって、体育見学をしている時に彼女と話したことをミノルに伝えた。
 
-きっといまなにか話せば、
+　ぼくが話し終えると、ミノルのアバターが考え込むポーズを取った。
+「伝聞の伝聞みたいな話だから、今日はやめておこうと思ったんだけど……」
 
-いまさらこんなこと言うのもなんだけど、ヒロトがずっと同性の友達として接してくたから、ふつうに学校に通えたんだ。ヒロトだけは、ぼくに何があっても態度を変えることがなかった……」
+　ミノルはそう言って、その日学校で起きたケイにまつわる事件について話した。それは、ケイがクラスメイトに骨折の重傷を負わせたというものだった。
 
-　ミノルの声は、少し震えていた。言いにくいことだったに違いない。
+　ミノルが聞いた話によると、それは、休み時間に起こった。はじめは、廊下でタツオとケイが何か言い合いをしていたらしい。内容は定かではないけれど、近くにいた生徒が、「セクサロイド」という単語を聞いたそうだ。その言葉を聞くと、ケイがタツオの腕をつかんだ。驚いたタツオがケイを突き飛ばすと、そこに運悪く他の生徒がいた。ケイが、その生徒の上に重なる形で倒れ込んだ。サイボーグの具体的な重量というのはわからないけれど、普通の人間よりずっと重いにちがいない。下敷きになった生徒は悲鳴を上げた。それを聞いて、フロア中から人が集まってきた。ケイが他の助けを借りて起き上がると、その生徒はぐったりしていて、すぐに病院に運ばれた。
 
-今のぼくがあるんだ。ヒロトだけは、何があっても
-
-ていなかったら、今のぼくはなかったと思う。ぼくは、ヒロトに感謝してるんだよ……」
-
-最近は、隠し事してるみたいで、
+「わるいのは、タツオじゃないか」話を聞いてすぐに、ぼくがいった。
+「ぼくもそうだと思う。でも、彼女がサイボーグじゃなかったら、そんな大けがにはならなかった。きっと、サイボーグとそうでない生徒が一緒に授業を受けることを、問題にする人が出てくる……」ミノルのアバターが、悲しそうに首を振った。
