Write draft of the fifth schene

--- a/_drafts/05_病室にて.md
+++ b/_drafts/05_病室にて.md
@@ -1,4 +1,4 @@
-　次の日、ぼくは病室でミノルからの連絡を待っていた。昨日はその後も事件について話したが、結局まだ情報が少なすぎるという結論になった。そして、ミノルが学校で情報を集めて報告するということでお開きになったのだ。だから、僕は放課後になるまで暇だった。
+　次の日、ぼくは病室でミノルからの連絡を待っていた。あの後も事件について話したが、結局まだ情報が少なすぎるという結論になった。そして、ミノルが学校で情報を集めて報告するということでお開きになったのだ。だから、僕は放課後になるまで暇だった。
 
 　昼下がり、時間をつぶすためにベッドでＶＲゲームをしていたが、あまり集中できず、いつのまにかまた事件の事を考えていた。
 
@@ -6,41 +6,67 @@
 
 　ケイの体は、可能な限り人間に近いパーツで構成されている。その点は、セクサロイドも同じであり、もしかすると同一のパーツが使われているかもしれない。そうだとすると、ケイが体を人間らしくすることは、同時にセクサロイドの体に近づくことも意味することになる。きっと、ケイ自身もそのことを気にしていて、それをタツオに指摘されたがために、腕をつかむくらいに怒ったのだ。
 
-　――そんなことをぼんやり考えていると、現実世界の方で何か音がするのを感じた。ぼくは、ゲームを止めてヘッドセットを外す。すると、ベッドを囲むカーテンの向こうに誰かいるようだった。
+　――そんなことをぼんやり考えていると、現実世界の方で何か音がするのを感じた。ぼくは、ゲームを止めてヘッドセットを外す。すると、ベッドを囲むカーテンに影がうつっていた。誰かがそこにいる。
 
-「開けていい？」聞き間違えるはずがない。ケイの合成音声の音だった。
+「開けていい？」聞き間違えるはずがない。ケイの合成音声の声だ。
 
+「いいよ」そう言いながら、ぼくはあわててＶＲセットを布団の中に隠す。
 
+　ケイがカーテンを開ける。逆光のせいだと思うけれど、その表情は心なしか暗くみえた。
 
-視界の端で何かが動くのを感じて、我に返った。
+「きみがここに来るなんて思ってなかったから、びっくりした。学校は？」ぼくは、思ったことをそのままいった。
 
-そんなことを考えながらげーむを、すぐ操作ミスしてゲームオーバーになった。
+「もう学校に行くことはない」ケイが首を振りながらいう。
 
+　頭の片隅にその可能性もあるかもしれないと思っていたので、意外と驚きはなかった。
 
-　ケイが人間らしさを求めるのと同じように、セクサロイドにも人間らしさが求められている。
+「……昨日のことがあったから？」とぼくがたずねる。
+「そう」
+「わるいのは、どう考えてもタツオの方だ。なにも、きみが学校をやめなくても……」
 
+　僕がそう言うと、ケイがまた首を振った。
 
-　ケイは、いま何を思っているだろう。
+「学校に通うことになったときから、何かあったらすぐにやめるって決めていたの。全身サイボーグはまだまだ珍しい。今の段階で、サイボーグが危険だという話が広まるのだけは、絶対に避けなければならない」
 
-最も人間に近い見た目をしたロボットと言えば、
+　彼女の言うことはもっともだった。いくら彼女に非はないといっても、サイボーグが一般の学校に通うことの是非が問われるのは間違いなかった。ぼくは、唇を噛む。彼女を説得しようと思ったけれど、うまい言葉が見つからなかった。それに、彼女のことだ。きっと一度決めたことは貫き通すだろう。
 
-皮肉なことに、
+「……どうして、ぼくにいろいろと話してくれるの？」これが最後の機会かもしれないと思って、ぼくはたずねた。
 
-　昼下がり、ぼくは
+　それを聞くと、彼女は微笑んだ。その質問を予期していたようだった。
 
-サイボーグが学校に通うことについてミノルと話したが、まだ情報が少なすぎた。
+「理由は二つ。一つは、きみがサイボーグになりたいと言っているという話を聞いて、興味を持ったから」
+「どこでその話を聞いたか、いまも話す気はない？」二つ目の理由も気になったけど、まずはそこからきくことにした。一度は諦めたものの、やっぱり気になったのだ。もう聞く機会がないかもしれないと思うと、なおさらだった。
 
-学校が終わりしだい、事の顛末を
+「実は、ずっと前に医者がぽろっとこぼしたの。サイボーグになりたがっている同じ年頃の患者がいるって」と彼女は話し始めた。
+「はじめて聞いたときは、耳を疑った。この体の大変さを何も知らないくせにって怒りさえした。その病院に同年代の患者は多くなかったし、すぐにきみだとわかった。――そう、入学前からわたしはキミのことを知っていた」
 
-学校が終わる時間になるのを待っていた。はやくミノルから話の続きを聞きたかった。
-　〈セクサロイド〉
+　それを聞いて、昔複数の病気を併発して大きな病院に入ったときのことを思い出した。その病院ではサイボーグ化も行っていて、担当の医者に自分もサイボーグにしてくれと何度も頼んだのだった。
 
-　昼下がり、暇をつぶすために仕方なくゲームをしていると、カーテンの奥から声がした。
+「――もう一つの理由は？」とぼくは聞いた。無神経にサイボーグになりたいと言っていたのが恥ずかしくて、あまりその話はしたくなかった。
 
-「開けてもいい？」聞き間違えるはずがない。ケイの合成音声の音だった。
+「もう一つは、ミノルくんとうまくやっていたこと。正直なところ、同じクラスになるまで、きみのことはすっかり忘れていた。顔と名前を見て思い出したんだけど、それだけだったらわたしから話しかけようとはることはなかったと思う。きみが、ミノルくんと親友だという話を聞いて、話してみることにした」
 
-　
+「どうして、そこでミノルが出てくるの？」ぼくは眉をひそめた。
 
+「それは、彼も、わたしと同じで特別な体を持っていたから。そういう特殊な事情のある人と親友になるのは、きみが思っているほど簡単じゃない。きみなら、わたしの体を意識せずに接してくれると思ったの」
 
+「それは買いかぶりだよ……」そういって、ぼくは目をそらした。
 
-ケイは学校に来なかったらしい。そして、その次の日からはゴールデンウィークの連休が始まる。
+　彼女は、肯定も否定もしなかった。なんとなく居心地がわるくて、ぼくは話題を変える。
+
+「また会えるかな」
+
+「それはわからない」彼女はきっぱりといった。連絡先を聞こうか、と思ったけれど、断られるのが目に見えたのでやめた。
+
+　彼女が、カーテンに手をかける。
+
+「もう行くの」ぼくはきいた。もう会うことがないかもしれないと思うと名残惜しくて、引き止める言葉を探す。
+「今日は、どうしてきてくれたの」
+
+　そうたずねると、彼女はいたずらっぽく笑った。
+「クラスメイトのお見舞いにくるのに、理由が必要？」
+
+　思いもよらない返事にぼくも笑う。
+「それもそうか。今日は来てくれてありがとう」
+
+「さようなら」そういって彼女は去っていった。
