--- a/_drafts/01_確認の問い.md
+++ b/_drafts/01_確認の問い.md
@@ -48,10 +48,9 @@
 「いや、一応確認しておこうと思って」予想外の強気な返事に、ピアスの生徒が少し戸惑ったようすでいった。
 「そう。じゃ、きみは童貞？」間髪入れずに彼女がきいた。
 
-<!-- FIXME: 描写 -->
-　突然の質問に、ピアスの生徒だけでなく、教室の全員があっけにとられた。その質問の意味が理解されるとともに、教室の注目はケイからピアスの生徒へと移っていく。教室から非難の空気は消え、好奇心一色になった。ピアスの生徒は口をパクパクさせて何か言おうとしていたが、言葉になっていなかった。
+　突然の質問に、ピアスの生徒だけでなく、教室の全員があっけにとられた。その質問の意味が理解されるとともに、教室の注目はケイからピアスの生徒へと移っていく。教室から非難の空気は消え、好奇心一色になった。ピアスの生徒は口をもぐもぐさせて何か言おうとしていたが、言葉になっていなかった。
 
-「確認のためなら何でも聞いていいと思うな」ピアスの生徒が何かいう前にケイがいった。
+「確認のためなら何でも聞いていいと思うな」ピアスの生徒が口を開く前にケイがいった。
 
 　こうして、タツオというピアスの生徒が童貞であることと、ケイという生徒がロボットではなく人間であり、それもかなり*肝がすわっている*ことが、クラスの共通認識となった。
 　ぼくは、彼女をかっこいいと思った。
