--- a/_drafts/02_帰り道.md
+++ b/_drafts/02_帰り道.md
@@ -27,12 +27,12 @@
 「そりゃそうだけど……」そんなに笑わなくてもいいだろ、と頭の中でつけ加える。
 
 「まあ、いくらやり返すためとはいえ、いきなり『童貞？』なんてきくような女子、なかなかいないよな……」ミノルはそういうと、ふと迷ったようすで続けた。
-「そのケイって子、女子、でいいんだよな……？」
+「――そのケイって子、女子、でいいんだよな……？」
 「スカートだったし、そうだと思うよ……」ぼくはちょっと口ごもる。
 「そっか……。*全身*サイボーグって話だから、ちょっと気になって」ミノルはそういって、なんでもない、というふうに肩をすくめる。
 「うん……」ぼくは、なんて言えばいいかわからなかった。サイボーグの性というのは少し気になるけれど、それを話題にするのは避けたかった。
 
-　ミノルは、もともとミノリという名前で、生物学的には女性だ。しかし、{性自認|ジェンダー・アイデンティティ}は男性で、ものごころついた頃からミノルと名乗っている。普段はそれを意識することはないけれど、こうして性が関わることが話題になると、どういう態度で接すればいいのか一瞬わからなくなる。そうやって変に意識することこそが、ミノルに気まずい思いをさせると分かっていても、どうにもできなかった。
+　ミノルは、もともとミノリという名前で、生物学的には女性だ。しかし、{性自認|ジェンダー・アイデンティティ}は男性で、ものごころついた頃からミノルと名乗っている。今もズボンを履いているし、はたからみてミノルを女性だと思う人はいないだろう。普段はそれを意識することはないけれど、こうして性が関わることが話題になると、どういう態度で接すればいいのか一瞬わからなくなる。そうやって変に意識することこそが、ミノルに気まずい思いをさせると分かっていても、どうにもできなかった。
 
 　ミノルも、ぼくがこの話題を苦手に思っていることを知っていて、あまりその手の話を振ってくることはない。ただ、そうやって気を使わせていることも、ぼくには申し訳なかった。ミノルにとって大事な話を、友達としてきちんと聞いてやれない自分が嫌だった。
 
