--- a/_drafts/03_体育見学.md
+++ b/_drafts/03_体育見学.md
@@ -34,7 +34,7 @@
 　言うつもりがないというのなら、まあいいか。ぼくは諦めてはじめの質問に答える。
 「小学生の頃の話だよ。物語のヒーローにあこがれるみたいなものさ」
 
-　そう言ったあと、彼女のように事故や病気でサイボーグにならざるをえない人もいる中で、サイボーグになりたいなんていっていたことが、あまりに無神経なことに思えて、恥ずかしくなった。
+　そう言ったあと、事故や病気でサイボーグにならざるをえない人もいる中で、サイボーグになりたいなんていっていたことが、あまりに無神経なことに思えて、恥ずかしくなった。
 「気を悪くしたのなら、ごめん」ぼくは目を伏せていった。
 
 「私こそ、ごめん。そんな気にさせるつもりはなかった」ケイがいう。ぼくが何も話さないのを確認すると、彼女が続けた。
@@ -62,7 +62,7 @@
 
 　おかしいでしょ、というように彼女は微笑みの表情をつくる。ぼくはとても笑う気になれない。この話がどこへ向かっているのかわからなかったけれど、ぼくは黙ったまま続きを促した。
 
-「それを知ったとき、最初はやるせなかった。タツオみたいに悪意があれば怒ることも簡単だけど、その時は怒りをどこに向ければいいのかわからなかった。けれど、何度もロボットに間違えられるうち、やるせなさはある疑問に変わった。わたしは本当に人間なのかって。わたしは、自分を人間だと思い込んでるロボットかもしれないって考え始めると、それが頭を離れなくなった。鏡を見ても、そこにいるのは機械仕掛けの人形でしかない。胸に手を当てても、心音を感じることはない。生身の心臓もなければ、鼓動を感じる皮膚もない。医者に頼んで、外部カメラの遠隔視野から自分の生身の部分を見せてもらったこともある。でも、その*目*は、わたし自身の目じゃない。その目で見たものが本当かも、その体が本当にわたしのものかもわからない。
+「それを知ったとき、最初はやるせなかった。タツオみたいに悪意があれば怒ることも簡単だけど、その時は怒りをどこに向ければいいのかわからなかった。けれど、何度もロボットに間違えられるうち、やるせなさや怒りはある疑問に変わった。わたしは本当に人間なのかって。わたしは自分を人間だと思い込んでるロボットかもしれないって。そう考え始めると、その疑問が頭を離れなくなった。鏡を見ても、そこにいるのは機械仕掛けの人形でしかない。胸に手を当てても、心音を感じることはない。生身の心臓もなければ、鼓動を感じる皮膚もない。医者に頼んで、外部カメラの遠隔視野から自分の生身の部分を見せてもらったこともある。でも、その*目*は、わたし自身の目じゃない。その目で見たものが本当かも、その体が本当にわたしのものかもわからない。
 
 　わたしは、自分が人間であるという根拠を探した。いろいろな本を読んでわかったのは、そもそも『{人間|パーソン}』の定義が曖昧だということだった。それに気づいたとき、わたしは、人間であることの定義を、わたしの外側ではなく、わたし自身の内側に求めることにした。つまり、*わたしは*、*わたし自身が人間だと思うから*、*人間である*。そう考えることにしたの。それ以来、わたしは自分が人間であるということを強く意識してきた。それが、今のわたしを形作ってる。サイボーグにならなかったら、こうはなってない」
 
@@ -71,15 +71,15 @@
 　ぼくは、あの入学式の朝、悪意のある言葉に全く動じない彼女を見て強いと思った。でも、それは間違いだった。きっと、彼女は傷ついていたのだ。ただ、あの程度の言葉でつけらるる傷なんかよりずっと深い傷をいくつも負っていて、目立たなかっただけにすぎない。
 
 「きみの強さの理由が、少しわかった気がする……」ぼくはいった。
-「ぼくははじめ、病弱な体を変えるために、サイボーグになりたいと思った。でも、今はそうじゃない。きみのように強くなるために、サイボーグになりたいと思っていたんだ。それは、ぼくの体の問題じゃなく、心の問題だった。心の弱さを体の弱さのせいにしていたのかもしれない」
+「ぼくははじめ、病弱な体を変えるために、サイボーグになりたいと思った。でも、今はそうじゃない。きみのように強くなるために、サイボーグになりたいと思っていたんだ。それは、ぼくの体の問題じゃなく、心の問題だった。心の弱さを体の弱さのせいにしていたのかもしれない……」
 
-　ぼくがそう言って納得したつもりになっていると、彼女がかぶりを振りながら、さえぎるようにいった。
+　ぼくがそう言うと、彼女がかぶりを振りながら、さえぎるようにいった。
 
 「それは違う。心の問題と体の問題は、そんな簡単に切り分けられるものじゃない。わたしは、わたしが人間であると強く意識するために、体の方も変えてきた。体の部品を交換する時は、機能性を犠牲にしてでも、できるだけ見た目や感覚が生身の体に近いものを選ぶようにした。そうしないと、自分が人間であるという意識が揺らぎそうだったから。きみは、心の問題を体の問題にすりかえることが間違いだと思っているようだけれど、そんなことない。わたしは、心と体が不可分だと思ってる。この機械の体でさえ、わたしの心と密接につながっている」
 
 　ぼくは改めて彼女の体を見た。はじめてみた時、ぼくは一瞬彼女のを何の変哲もない生徒だと思ったことを思い出した。彼女がさらに言葉を続けた。
 
-「体を変えることで心を変えようとするのは何も珍しい話じゃない。サイボーグはちょっと極端だけれど、たとえば化粧や筋トレもそう。多くの人は、自分に自信をもつため――心を強くするため――に、化粧や筋トレをしている」
+「体を変えることで心を変えようとするのは何も珍しい話じゃない。サイボーグはちょっと極端だけれど、たとえば化粧や筋トレもなんかそう。自分に自信をもつため――心を強くするため――に、化粧や筋トレをしている人は少なくない」
 
 「きみは、ぼくにサイボーグになるべきだと言いたいの」ぼくがそういうと、彼女はまた首を振った。
 
