--- a/_drafts/01_確認の問い.md
+++ b/_drafts/01_確認の問い.md
@@ -15,11 +15,11 @@
 
 　それが、ケイだった。
 
-　はじめ、なぜみんなが黙り込んでしまったのか、ぼくにはわからなかった。何の変哲もない普通の生徒に見えたのだ。しかし、彼女がドアを閉めようとして、違和感に気づく。*その動きは*、*人間のそれではなかった*。機械特有のなめらかさに欠けた動きだったのである。静寂の中で、低くうなるモーター音だけが響いていた。
+　はじめ、なぜみんなが黙り込んでしまったのか、ぼくにはわからなかった。彼女が何の変哲もない普通の生徒に見えたのだ。しかし、彼女がドアを閉めようとして、違和感に気づく。*その動きは*、*人間のそれではなかった*。機械特有のなめらかさに欠けた動きだったのである。静寂の中で、低くうなるモーター音だけが響いていた。
 
-　一瞬、ロボットが教室に入ってきたのかと思った。けれど、すぐそんなはずがないことに思い至る。いくら非産業ロボットが普及してきたとはいえ、公立の学校に導入されるほどではない。何より、これほどまで細かく人間を模したロボットが、学校なんかで必要になるはずがない。
+　一瞬、ロボットが教室に入ってきたのかと思った。けれど、すぐそんなはずがないことに思い至る。いくらロボットが生活圏にも普及してきたとはいえ、公立の学校に導入されるほどではない。何より、これほどまで細かく人間を模したロボットが、学校なんかで必要になるはずがない。
 
-　きっと、彼女はサイボーグだ。この十数年で、サイボーグ技術は驚くほど進歩した。二〇二〇年に〈悪魔の研究〉と呼ばれる膨大な論文や研究資料がインターネットに突然現れ、脳科学や神経科学といった分野を中心に、人間の身体に関する理解が大きく進展した。そして、ソフトウェアやハードウェアの技術発展とあいまって、サイボーグが現実のものとなったのだ。今では、ほとんどの身体機能は人工物で代替できるらしい。じっさい、義肢や義眼の人を見かけることは、それほど珍しくなくなっていた。
+　きっと、彼女はサイボーグだ。この十数年で、サイボーグ技術は驚くほど進歩した。二〇二一年に〈悪魔の研究〉と呼ばれる膨大な論文や研究資料がインターネットに突然現れ、脳科学や神経科学といった分野を中心に、人間の身体に関する理解が大きく進展した。そして、ソフトウェアやハードウェアの技術発展とあいまって、サイボーグが現実のものとなったのだ。今では、ほとんどの身体機能は人工物で代替できるらしい。じっさい、義肢や義眼の人を見かけることは、それほど珍しくなくなっていた。
 
 <!-- FIXME: 「いや、…」や「どんなに精巧な人形も…」をなんとかする -->
 　しかし、彼女ほど身体の多くをサイボーグ化している人は見たことがない。ドアを閉める動きから、両手両足が義肢であることが分かる。服の内側はわからないが、顔も造りものだった。いや、遠目にはほとんどわからない。それでも、どんなに精巧な人形の顔も人間のものでないと分かるのと同じように、彼女の顔が自然のものでないことがわかる。その瞳や表情には、なにか生気のようなものが感じられなかった。
@@ -28,7 +28,7 @@
 
 　とはいえ、話し相手のいないぼくは、教室を様子をうかがうくらいしかすることがない。顔をあげると、さっき席について教えてくれた髪の長い生徒が、サイボーグの彼女にも同じ説明をしていた。じろじろ見ないようにとは思っても、好奇心には勝てず、ぼくは視界の端で彼女の動きを追っていた。
 
-　彼女は、黒板を確認すると、教室の真ん中の方へ歩いていった。彼女の席らしい空席の前で止まると、その形を確かめるようにしばらく席を眺める。そして、ゆっくり椅子を引くと、何度も自身と椅子の位置関係を確認しながら、慎重に席についた。
+　彼女は、黒板を確認すると、教室の真ん中の方へ歩いていった。彼女の席らしい空席の前で止まると、その形を確かめるようにしばらく席を眺める。そして、ゆっくり椅子を引いて、何度も自身と椅子の位置関係を確認しながら、慎重に席についた。
 
 「なあ、あれってロボットじゃないよな？」斜め前の席の生徒が、左のピアスの生徒に小声で聞いた。
 「わかんねえ。本人に聞いたら？」ピアスの生徒が面倒そうに答える。
