--- a/_drafts/02_帰り道.md
+++ b/_drafts/02_帰り道.md
@@ -26,7 +26,7 @@
 「それは、サイボーグと関係ないだろ」
 「そりゃそうだけど……」そんなに笑わなくてもいいだろ、と頭の中でつけ加える。
 
-「まあ、いくらやり返すためとはいえ、いきなり『童貞？』なんてきくような女子、なかなかいないよな……」ミノルはそういうと、ふと迷ったようすで続けた。
+「まあ、いくらやり返すためとはいえ、いきなり『童貞？』なんてきくような女子、なかなかいないよな」ミノルはそういうと、ふと迷ったようすで続けた。
 「――そのケイって子、女子、でいいんだよな……？」
 「スカートだったし、そうだと思うよ……」ぼくはちょっと口ごもる。
 「そっか……。*全身*サイボーグって話だから、ちょっと気になって」ミノルはそういって、なんでもない、というふうに肩をすくめる。
