--- a/_drafts/04_VR空間.md
+++ b/_drafts/04_VR空間.md
@@ -1,4 +1,4 @@
-病室にて　次の日、ぼくはまた熱を出して学校を休んだ。そして、その次の日にはさらに悪化して、結局いつものように入院することになった。
+　次の日、ぼくは熱を出して学校を休んだ。そして、その次の日にはさらに悪化して、結局いつものように入院することになった。
 
 　高熱にうなされながら、ケイに言われたことを考えた。心と体は密接につながっている。たしかに、こうして体が弱っていると、心も弱気になってくる。ぼくはまた、自分の体に嫌気がさしていた。いまさらサイボーグになりたいなんて言わないけれど、やっぱりこの不自由な体を、丈夫で健康な体に取り替えたいと思う。そうすれば、心も強くなれるだろうか？　いや、逆かもしれない。心を強く持たないと、体だって強くならないのかもしれない……。
 
@@ -10,7 +10,7 @@
 
 　ぼくは、オーケーの絵文字を返す。ちょうど、ミノルに聞きたいこともあった。
 
-　夕方、ぼくはミノルに会う準備をする。新しいチャットルームを作成して、ミノルにアドレスを送った。そして、手袋式のハンドコントローラをつけ、ＶＲヘッドセットを装着して、ミノルが来るのを待つ。病室にうんざりしていたぼくは、ＶＲチャットルームの内装をまぶしいくらいの陽光が入るおしゃれなカフェに設定した。店員や他の客もいるが、それらはすべてＮＰＣだ。
+　夕方、ぼくはミノルに会う準備をする。新しいチャットルームを作成して、ミノルにアドレスを送った。そして、手袋式のハンドコントローラをつけ、ＶＲヘッドセットを装着して、ミノルが来るのを待つ。病室にうんざりしていたぼくは、ＶＲチャットルームの内装をの陽光が入るおしゃれなカフェに設定した。店員や他の客もいるが、それらはすべてＮＰＣだ。
 
 　むかしはぼくが入院するたび、ミノルが病室までお見舞いに来てくれていた。けれど、ぼくがあまりに何度も入院するので、いつしかこの形に落ち着いた。物理的な病室ではなく、インターネットに用意したヴァーチャル空間にお見舞いに来てもらうのである。ミノルも病室まで来る手間が省けるし、ぼくもやつれた姿を気にする必要がない。
 
@@ -33,7 +33,7 @@
 
 「ミノルはさ、体を変えたいと思ったことある？」
 
-　それは、高熱でうなされている時に頭をよぎったことだった。ケイのいうように、心と体が密接に関わっているなら、体の性と心の性が異なるミノルはどうなのだろう。幼い頃は、ミノルも女の子らしい格好をさせられることがあった。そんな時、彼はきまって黙り込んで弱々しくなった。彼の親の話によると、その格好になるまでは暴れまわって徹底的に抵抗していたらしい。化粧や筋トレがそうだというなら、服だって体の延長なのだ。それは心に影響する。そう考えたとき、ある疑問が頭を離れなくなった。もしかするとミノルも――服だけでなく――体を変えたいとずっと悩んでいたのではないだろうか。そう思うと、長年一緒に過ごしてきたのに、ミノルのことを何も知らない気がした。
+　それは、高熱でうなされている時に頭をよぎったことだった。ケイのいうように、心と体が密接に関わっているなら、体の性と心の性が異なるミノルはどうなのだろう。幼い頃は、ミノルも女の子らしい格好をさせられることがあった。そんな時、彼はきまって弱々しく黙り込んでしまった。彼の親の話によると、その格好になるまでは暴れまわって徹底的に抵抗していたらしい。化粧や筋トレがそうだというなら、服だって体の延長なのだ。それは心に影響する。そう考えたとき、ある疑問が頭を離れなくなった。もしかするとミノルも――服だけでなく――体を変えたいとずっと悩んでいたのではないだろうか。そう思うと、長年一緒に過ごしてきたのに、ミノルのことを何も知らない気がした。
 
 　ミノルが、ふーっと息を吐く音が聞こえた。そしていつもの調子で続けた。
 
@@ -45,7 +45,7 @@
 
 「同じとは思わないけど、ぼくも小さい頃、大きくなれば体が良くなると思ってた……」当時を思い出して、ぼくがいった。
 
-「うん。そんなだったから、二次性徴がきたときは絶望だった。それに気づいた時ほど、自分の体が嫌だったことはない……。それで、――ヒロトに話したことはなかったけど――中学に入った頃から二次性徴を抑制する治療を始めたんだ。親や医者と相談して、もうすぐホルモン療法も始めることになってる。――体を変えたいって思うだけじゃなく、ぼくはすでに自分の体を変えつつあるんだ。サイボーグみたいに外科的なものじゃないけどね」
+「うん。そんなだったから、二次性徴がきたときは絶望だった。それに気づいた時ほど、自分の体が嫌だったことはない。それで、――ヒロトに話したことはなかったけど――中学に入った頃から二次性徴を抑制する治療を始めたんだ。親や医者と相談して、もうすぐホルモン療法も始めることになってる。――体を変えたいって思うだけじゃなく、ぼくはすでに自分の体を変えつつあるんだ。サイボーグみたいに外科的なものじゃないけどね」
 
 　ショックだった。ミノルがそんな悩みを持っていたことも、そんな治療をはじめていたことも、何も気づいていなかった。本当にミノルのことを何も知らなかったのだ。たしかに、ミノルの体は、同年代の女性に比べれば、胸も出ていないし体の丸みもない。ただ、ミノルが男であることがあまりに当たり前で、体が女性であることは知ってはいても、そういうものかと思っていた。ちょっと考えればそんなはずないのに、今まで思いもよらなかった。
 「知らなかった……」ぼくは、言葉を絞り出した。
@@ -54,7 +54,7 @@
 
 「そうだったんだ……」自分の鈍さがうとましかった。
 
-「――でも、話せてすっきりしたよ。昔は絶対知られたくないと思ってたけど、最近は何か隠し事してるみたいでいやだったんだ。聞いてくれてよかった……。今さらこんな事言うのもなんだけど――ぼくに何があっても、同性の友達として変わらず接してくれるヒロトには感謝してる……」
+「――でも、話せてすっきりしたよ。昔は絶対知られたくないと思ってたけど、最近は何か隠し事してるみたいでいやだったんだ。聞いてくれてよかった……。今さらこんな事言うのもなんだけど、同性の友達として変わらず接してくれるヒロトには感謝してる……」
 
 　ミノルの声はだんだん小さくなって、最後は少し震えていた。やっぱり、話しにくいことに違いなかったのだ。はじめは平静を装っていたけど、話し終えて少し気が緩んだのだろう。ぼくは、今までのように、ミノルの変化に気づかないふりをした。
 
@@ -71,7 +71,7 @@
 
 　ミノルはそう言って、その日学校で起きたケイにまつわる事件について話した。それは、ケイがクラスメイトに骨折の重傷を負わせたというものだった。
 
-　ミノルが聞いた話によると、それは、休み時間に起こった。はじめは、廊下でタツオとケイが何か言い合いをしていたらしい。内容は定かではないけれど、近くにいた生徒が、「セクサロイド」という単語を聞いたそうだ。その言葉を聞くと、ケイがタツオの腕をつかんだ。驚いたタツオがケイを突き飛ばすと、そこに運悪く他の生徒がいた。ケイが、その生徒の上に重なる形で倒れ込んだ。サイボーグの具体的な重量というのはわからないけれど、普通の人間よりずっと重いにちがいない。下敷きになった生徒は悲鳴を上げた。それを聞いて、フロア中から人が集まってきた。ケイが他の助けを借りて起き上がると、その生徒はぐったりしていて、すぐに病院に運ばれた。
+　ミノルが聞いた話によると、それは、休み時間に起こった。はじめは、廊下でタツオとケイが何か言い合いをしていたらしい。内容は定かではないけれど、近くにいた生徒が、「セクサロイド」という単語を聞いたそうだ。その言葉を聞くと、ケイがタツオの腕をつかんだ。驚いたタツオがケイを突き飛ばすと、そこに運悪く他の生徒がいた。ケイが、その生徒の上に重なる形で倒れ込んだ。サイボーグの重量というのはわからないけれど、普通の人間よりずっと重いにちがいない。下敷きになった生徒は悲鳴を上げた。それを聞いて、フロア中から人が集まってきた。ケイが他の助けを借りて起き上がると、その生徒はぐったりしていて、すぐに病院に運ばれた。
 
 「わるいのは、タツオじゃないか」話を聞いてすぐに、ぼくがいった。
-「ぼくもそうだと思う。でも、彼女がサイボーグじゃなかったら、そんな大けがにはならなかった。きっと、サイボーグとそうでない生徒が一緒に授業を受けることを、問題にする人が出てくる……」ミノルのアバターが、悲しそうに首を振った。
+「ぼくもそうだと思う。でも、彼女がサイボーグじゃなかったら、そんな大けがにはならなかった。きっと、サイボーグとそうでない生徒が一緒に授業を受けることを、問題にする人が出てくる……」
