--- a/_drafts/03_体育見学.md
+++ b/_drafts/03_体育見学.md
@@ -32,7 +32,7 @@
 　言うつもりがないというのなら、まあいいか。ぼくは諦めてはじめの質問に答える。
 「小学生の頃の話だよ。物語のヒーローにあこがれるみたいなものさ」
 
-　そう言ったあと、事故や病気でサイボーグにならざるをえない人もいる中で、サイボーグになりたいなんてということは、とても失礼なことだと気づく。
+　そう言ったあと、事故や病気でサイボーグにならざるをえない人もいる中で、サイボーグになりたいなんていうのは、あまりに無神経で失礼なことだと気づいた。
 「気を悪くしたのなら、ごめん」ぼくは目を伏せていった。
 
 「私こそ、ごめん。そんな気にさせるつもりはなかった」ケイがいう。ぼくが何も話さないのを確認すると、彼女が続けた。
@@ -41,7 +41,7 @@
 　こないだのミノルの質問と同じだった。ただ、あの時みたいに「きみのように強くなれるなら」なんて言えるはずもなく、ぼくは言葉をにごした。
 「どうだろう……」そう言って彼女の方を見る。彼女は、立ったまま座るつもりがないようだった。考えてみれば、地面に座るというのは椅子に座るより難易度が高そうだ。彼女は、ぼくの方を見すえて、次の言葉を待っている。
 
-　ぼくは、また目をそらす。ざっとあたりを見回したけれど、僕とケイが話していることに気づいている人はいなさそうだった。ケイが別の誰かにここでの話をすることもないだろう。ぼくは意を決して、気になっていたことをそのまま聞くことにした。
+　ぼくは、また目をそらす。ざっとあたりを見回したけれど、僕とケイが話していることに気づいている人はいなさそうだった。ケイが別の誰かにここでのことを話すこともないだろう。ぼくは意を決して、気になっていたことをそのまま聞くことにした。
 「きみは、サイボーグだからそんなに強いの？」ぼくは、目をそらしたままそういった。
 
 「面白いこと言うのね」ケイがいう。合成音声の調子はいつもと変わらなかったけれど、心なしか笑っているように聞こえた。
@@ -50,39 +50,37 @@
 　すると、彼女もぼくから視線を外して、運動場の方をみながらいった。
 「これからいうことは秘密にしてくれる？」
 
-　クラスメイトがサイボーグになった経緯を聞いたときのように、きっぱり断られるだろうと思っていたので、意外だった。ぼくはうなずく。それを確認して、彼女は口を開いた。
+　あるクラスメイトがサイボーグになった経緯を聞いたときのように、きっぱり断られるだろうと思っていたので、意外だった。ぼくはうなずく。それを確認して、彼女は口を開いた。
 
 「わたしが強いかどうかは、わたしにはわからない。でも、きみが今のわたしを強いと思うのなら、その強さはきっと、わたしがサイボーグになってから手に入れたものだと思う」
 
 　ケイが自分のことを話していることに気づいて、ぼくは驚いた。ぼくの知る限りでは、これまで誰も彼女から彼女自身の話を聞いたものはいなかった。なぜぼくなんかに他の誰にもしないような話をしようとしているのかわからなかったけれど、わざわざ秘密にしてと前置きして話そうとしているのだ。彼女がぼくを信用してくれていることを感じて、それに応えようと思った。
 「サイボーグになってから、何があったの？」ぼくは、彼女の方を向いてたずねた。
 
-「そうね……。たとえば、サイボーグの体でようやく歩けるようになったころ、こんなことがあった。一人で病院やリハビリ施設を歩いているとき、目の前にゴミを投げられた。それも、なんの害もなさそうな老人や子どもが、平気な顔でそうするの。まだうまく喋れなかった私は、なんでそんなことされるのかわからなくて、怖くて、ただ立ちすくむしかなかった。あとからわかったんだけど、彼らはわたしを掃除ロボットだと思っていたんだって。当時そういう場所にいるロボットといえば掃除ロボットくらいだったし、わたしも今よりずっと機械らしい見た目だった。彼らは、ロボットが掃除しやすいように、親切心でゴミをわたしの前に投げていたわけ」
+「そうね……。たとえば、サイボーグの体でようやく歩けるようになったころ、こんなことがあった。一人で病院やリハビリ施設を歩いているとき、目の前にゴミを投げられたの。それも、なんの害もなさそうな老人や子どもが、平気な顔でそうしていた。まだうまく喋れなかった私は、なんでそんなことされるのかわからなくて、怖くて、ただ立ちすくむしかなかった。あとからわかったんだけど、彼らはわたしを掃除ロボットだと思っていたんだって。当時そういう場所にいるロボットといえば掃除ロボットくらいだったし、わたしも今よりずっと機械らしい見た目だった。彼らは、ロボットが掃除しやすいように、親切心でゴミをわたしの前に投げていたわけ」
 
 　おかしいでしょ、というように彼女は微笑みの表情をつくる。ぼくはとても笑う気にはなれなかった。
 
 「それを知ったとき、最初はやるせなかった。タツオみたいに悪意があれば怒ることも簡単だけど、その時は怒りをどこに向ければいいのかわからなかった……」
 
+　ぼくは、あの入学式の朝、悪意のある言葉に全く動じない彼女を見て強いと思った。でも、それは間違いだった。きっと、彼女は傷ついていたのだ。ただ、あの程度の言葉でつけらるる傷なんかよりずっと深い傷をいくつも負っていて、目立たなかっただけにすぎない。
 「つらかったね……」何かもっと気の利いたことが言いたかったけれど、月並みな言葉しか出てこなかった。
 
 「ううん、本当につらかったのはその後だった……」彼女は、そういながら首を振った。
-「その後も、そういう出来事は何度もあった。そうやって、何度も何度もロボットに間違えられるうち、やるせなさや怒りはどこかへいって、ある疑問が生まれた。わたしは本当に人間なのかって。わたしは自分を人間だと思い込んでるロボットかもしれないって。一度そう考え始めると、そうとしか思えなくなってしまった。鏡を見ても、そこにいるのは機械仕掛けの人形でしかない。胸に手を当てても、心音を感じることはない。生身の心臓もなければ、鼓動を感じる皮膚もない。医者に頼んで、外部カメラの遠隔視野から自分の生身の部分を見せてもらったこともある。でも、その*目*は、わたし自身の目じゃない。その目で見たものが本当かも、その体が本当にわたしのものかもわからない。自分が何者かわからなくなって、生きている心地がしなかった……」
+「その後も、そういう出来事は何度もあった。そうやって、何度も何度もロボットに間違えられるうち、やるせなさや怒りはどこかへいって、ある疑問が生まれた。わたしは本当に人間なのかって。わたしは自分を人間だと思い込んでるロボットかもしれないって。一度そう考え始めると、そうとしか思えなくなった。鏡を見ても、そこにいるのは機械仕掛けの人形でしかない。胸に手を当てても、心音を感じることはない。生身の心臓もなければ、鼓動を感じる皮膚もない。医者に頼んで、外部カメラの遠隔視野から自分の生身の部分を見せてもらったこともある。でも、その*目*は、わたし自身の目じゃない。その目で見たものが本当かも、その体が本当にわたしのものかもわからない。自分が何者かわからなくなって、生きている心地がしなかった……」
 
-　彼女の言葉を聞いて、ぼくは知らず知らずのうち自分の胸に手を当てていた。そこには、たしかに心臓があり、その鼓動を感じることができた。しかし、彼女はそれを感じることができないのである。その感覚を想像しようとしたけれど、うまくいかない。自分が人間であるなんて、あまりに当たり前すぎて、そうでない可能性なんて考えることができなかった。
+　彼女の言葉を聞いて、ぼくは知らず知らずのうち自分の胸に手を当てていた。そこには、たしかに心臓があり、その鼓動を感じることができた。しかし、彼女はそれを感じることができないのだ。その感覚を想像しようとしたけれど、うまくいかない。自分が人間であるなんて、あまりに当たり前すぎて、そうでない可能性なんて考えることができなかった。
 「そこから、どうやってきみは今のようになったの？」そんな頃があったなんて、眼の前の彼女からは想像できなかった。
 
-「自分が人間であるという根拠を得るために、医者に聞きまわったり、いろいろな本を読んだりした。無我夢中で自分が人間だという証拠を探した。そうやってわかったのは、そもそも『{人間|パーソン}』の定義が曖昧だということだった。それに気づいたとき、わたしは、人間であることの定義を、わたしの外側ではなく、わたし自身の内側に求めることにした。つまり、*わたしは*、*わたし自身が人間だと思うから*、*人間である*。そう考えることにしたの。それ以来、わたしは自分が人間であるということを強く意識してきた。それが、今のわたしを形作ってる。わたしに強さがあるとすれば、それはそこからくるものだと思う」
+「自分が人間であるという根拠を探して、医者に聞きまわったり、いろいろな本を読んだりした。無我夢中で自分が人間だという証拠を調べ回った。でも、そうやってわかったのは、そもそも『{人間|パーソン}』の定義が曖昧だということだった。それに気づいたとき、わたしは、人間であることの定義を、わたしの外側ではなく、わたし自身の内側に求めることにした。つまり、*わたしは*、*わたし自身が人間だと思うから*、*人間である*。そう考えることにしたの。それ以来、わたしは自分が人間であるということを強く意識してきた。それが、今のわたしを形作ってる。わたしに強さがあるとすれば、それはそこからくるものだと思う」
 
-　言い終えると、彼女はそのまま黙り込んだ。微動だにしないその表情は、何かを読み取るにはあまりに難しかった。
+　彼女は、そういってぼくの方を見た。微動だにしないその表情は、何かを読み取るにはあまりに難しかった。
 
-　ぼくは、あの入学式の朝、悪意のある言葉に全く動じない彼女を見て強いと思った。でも、それは間違いだった。きっと、彼女は傷ついていたのだ。ただ、あの程度の言葉でつけらるる傷なんかよりずっと深い傷をいくつも負っていて、目立たなかっただけにすぎない。
-
-「きみの強さが、少しわかった気がする……」ぼくはいった。
-「ぼくははじめ、病弱な体を変えるために、サイボーグになりたいと思った。でも、今はそうじゃない。きみのように強くなるために、サイボーグになりたいと思っていたんだ。それは、ぼくの体の問題じゃなく、心の問題だった。心の弱さを体の弱さのせいにしていたのかもしれない……」
+「きみの強さは、その体によるものじゃなくて、きみ自身の意識や心からくるものだったんだね……。ぼくははじめ、病弱な体を変えるために、サイボーグになりたいと思った。でも、今はそうじゃない。きみのように強くなるために、サイボーグになりたいと思っていたんだ。それは、ぼくの体の問題じゃなく、心の問題だった。心の弱さを体の弱さのせいにしていたのかもしれない……」
 
 　ぼくがそう言うと、彼女がかぶりを振りながら、さえぎるようにいった。
 
-「それは違う。心の問題と体の問題は、そんな簡単に切り分けられるものじゃない。わたしは、わたしが人間であると強く意識するために、体の方も変えてきた。体の部品を交換する時は、機能性を犠牲にしてでも、できるだけ見た目や感覚が生身の体に近いものを選ぶようにした。そうしないと、自分が人間であるという意識が揺らぎそうだったから。きみは、心の問題を体の問題にすりかえることが間違いだと思っているようだけれど、そんなことない。わたしは、心と体が不可分だと思ってる。この機械の体でさえ、わたしの心と密接につながっている」
+「それは違う。心の問題と体の問題は、そんな簡単に切り分けられるものじゃない。わたしは、わたしが人間であると強く意識するために、体の方も変えてきた。体の部品を交換する時は、機能性を犠牲にしてでも、できるだけ見た目や感覚が生身の体に近いものを選ぶようにした。そうしないと、自分が人間であるという意識が揺らぎそうだったから。きみは、心の問題を体の問題にすりかえることが間違いだと思っているようだけれど、そんなことない」
 
 　あらためて彼女の体を見る。はじめてみた時、ぼくは一瞬彼女のを何の変哲もない生徒だと思ったことを思い出した。彼女がさらに言葉を続けた。
 
