--- a/_drafts/04_VR空間.md
+++ b/_drafts/04_VR空間.md
@@ -10,17 +10,17 @@
 
 　ぼくは、オーケーの絵文字を返す。ちょうど、ミノルに聞きたいこともあった。
 
-　夕方、ぼくはミノルに会う準備をする。新しいチャットルームを作成して、ミノルにアドレスを送った。そして、手袋式のハンドコントローラをつけ、ＶＲヘッドセットを装着して、ミノルが来るのを待つ。病室にうんざりしていたぼくは、ＶＲチャットルームの内装をの陽光が入るおしゃれなカフェに設定した。店員や他の客もいるが、それらはすべてＮＰＣだ。
+　夕方、ぼくはミノルに会う準備をする。新しいチャットルームを作成して、ミノルにアドレスを送った。そして、手袋式のハンドコントローラをつけ、ＶＲヘッドセットを装着して、ミノルが来るのを待つ。病室にうんざりしていたぼくは、ＶＲチャットルームの内装を、陽光が入るおしゃれなカフェに設定した。店員や他の客もいるが、それらはすべてＮＰＣだ。
 
 　むかしはぼくが入院するたび、ミノルが病室までお見舞いに来てくれていた。けれど、ぼくがあまりに何度も入院するので、いつしかこの形に落ち着いた。物理的な病室ではなく、インターネットに用意したヴァーチャル空間にお見舞いに来てもらうのである。ミノルも病室まで来る手間が省けるし、ぼくもやつれた姿を気にする必要がない。
 
 　ミノルが、カフェの扉を開けて入ってきた。ミノルのアバターはアメコミのヒーロースタイルで、ボディビルダーのような筋肉をしている。ぼくを見つけると、向かいに座った。
 「今回はどう？」ミノルの声はいつもより少し低い。声にピッチシフトのエフェクトをかけて、男性らしい声になるよう設定しているのだ。
-「いつもと同じ。もう大丈夫」ぼくの声は、普段と変わらない。アバターは中学の時に好きだったアニメのキャラクターをモチーフにしたもので、そのキャラクターはサイボーグだった。
+「いつもと同じ。もう大丈夫」ぼくの声は、普段と変わらない。アバターは中学の時に好きだったアニメのキャラクターをモチーフにしたもので、その右腕は機械式だった。
 
 　それからは、普段一緒に登校するときと同じように、学校であったことや、最近見たビデオ、ハマってるゲームの話なんかをした。ＶＲチャットの便利な点は、視覚情報をその場で楽に共有できることだ。現実だとモバイルデバイスの小さいディスプレイを一緒にのぞくことになるが、ここでは好きなサイズの画面を空間の任意の場所に広げることができる。
 
-　一通りのことを話し終えて、次の話題を探すための間が生まれた。ぼくは、考えていた質問をミノルに聞くことを考える。でも、どうやってその話を切り出せばいいかわからなかった。それは、僕が普段避けている話題だったし、下手に話せばミノルをを傷つけることになるかもしれない。いつもなら何も考えずに話せるのに、言葉が頭の中で渦を巻いて形にならなかった。現実世界でぼくはつばを飲み込む。ハンドコントローラの手汗が気持ち悪さが無性に気になった。
+　一通りのことを話し終えて、次の話題を探すための間が生まれた。ぼくは、聞こうと思っていた質問をすることを考える。でも、どうやってその話を切り出せばいいかわからなかった。それは、僕が普段避けている話題だったし、下手に話せばミノルをを傷つけることになるかもしれない。いつもなら何も考えずに話せるのに、言葉が頭の中で渦を巻いて形にならなかった。現実世界でぼくはつばを飲み込む。ハンドコントローラの手汗が気持ち悪さが無性に気になった。
 
 「……まだ調子悪い？」ミノルがいった。
 「いや、そんなことないよ。どうして？」現実世界の様子を見抜かれて驚いたぼくは、反射的に否定した。元気に聞こえるように努めたけれど、かえってわざとらしかったかもしれない。
@@ -57,19 +57,16 @@
 「――でも、話せてすっきりしたよ。昔は絶対知られたくないと思ってたけど、最近は何か隠し事してるみたいでいやだったんだ。聞いてくれてよかった……。今さらこんな事言うのもなんだけど、同性の友達として変わらず接してくれるヒロトには感謝してる……」
 
 　ミノルの声はだんだん小さくなって、最後は少し震えていた。やっぱり、話しにくいことに違いなかったのだ。はじめは平静を装っていたけど、話し終えて少し気が緩んだのだろう。ぼくは、今までのように、ミノルの変化に気づかないふりをした。
+「うん……」
 
-「うん……」声を出して、自分でも驚いた。ミノルと同じように、ぼくの声も震えていた。視界も少しゆがんでいることに気づく。ＶＲ空間越しでよかった。目をこすっても、ミノルに見られることはない。――もしかしたら、ミノルも同じことを思っているかもしれない。
-
-　少しのあいだ、ぼくらは二人とも押し黙った。それは、必要な沈黙だった。
-
-「――でも、どうして急にそんなこと聞こうと思ったの？」ミノルが口を開く。その声は、もう震えていなかった。ぼくも切り替えるように努める。
+「――でも、どうして急にそんなこと聞こうと思ったの？」ミノルが口を開く。その声は、もう震えていなかった。
 
 「ケイに言われたことがきっかけだったんだ……」ぼくはそういって、体育見学をしている時に彼女と話したことをミノルに伝えた。
 
-　ぼくが話し終えると、ミノルのアバターが考え込むポーズを取った。
+　ぼくが話し終えると、ミノルが迷ったようすでいった。
 「伝聞の伝聞みたいな話だから、今日はやめておこうと思ったんだけど……」
 
-　ミノルはそう言って、その日学校で起きたケイにまつわる事件について話した。それは、ケイがクラスメイトに骨折の重傷を負わせたというものだった。
+　そう言ってミノルは、その日学校で起きたケイにまつわる事件について話した。それは、ケイがクラスメイトに骨折の重傷を負わせたというものだった。
 
 　ミノルが聞いた話によると、それは、休み時間に起こった。はじめは、廊下でタツオとケイが何か言い合いをしていたらしい。内容は定かではないけれど、近くにいた生徒が、「セクサロイド」という単語を聞いたそうだ。その言葉を聞くと、ケイがタツオの腕をつかんだ。驚いたタツオがケイを突き飛ばすと、そこに運悪く他の生徒がいた。ケイが、その生徒の上に重なる形で倒れ込んだ。サイボーグの重量というのはわからないけれど、普通の人間よりずっと重いにちがいない。下敷きになった生徒は悲鳴を上げた。それを聞いて、フロア中から人が集まってきた。ケイが他の助けを借りて起き上がると、その生徒はぐったりしていて、すぐに病院に運ばれた。
 
