--- a/_drafts/05_病室にて.md
+++ b/_drafts/05_病室にて.md
@@ -2,11 +2,11 @@
 
 　昼下がり、時間をつぶすためにベッドでＶＲゲームをしていたが、あまり集中できず、いつのまにかまた事件の事を考えていた。
 
-　タツオがいったという「セクサロイド」という言葉は、たしかに、人間らしい見た目を求めるケイにとっては癇に障るものだっただろう。セクサロイドは、人間との性行為を目的に作られたロボットの総称だ。ロボットの普及とともに、セクサロイドを売りにした風俗店も一気に広まった。ふつう、人型のロボットは、ひと目でロボットと分かるような見た目をしている。人間らしい見た目が必要になることはほとんどないし、まぎらわしいだけだからだ。しかし、セクサロイドはそうではない。セクサロイドには、人間らしい見た目や触感が求められる。そのため、――皮肉なことに――セクサロイドが最も人間に近いロボットといわれていた。
+　タツオがいったという「セクサロイド」という言葉は、たしかに、人間らしい見た目を求めるケイにとってはかんに障るものだっただろう。セクサロイドは、人間との性行為を目的に作られたロボットの総称だ。ロボットの普及とともに、セクサロイドを売りにした風俗店も一気に広まった。ふつう、人型のロボットは、ひと目でロボットと分かるような見た目をしている。人間らしい見た目が必要になることはほとんどないし、まぎらわしいだけだからだ。しかし、セクサロイドはそうではない。セクサロイドには、人間らしい見た目や触感が求められる。そのため――皮肉なことに――セクサロイドが最も人間に近いロボットといわれていた。
 
-　ケイの体は、可能な限り人間に近いパーツで構成されている。その点は、セクサロイドも同じであり、もしかすると同一のパーツが使われているかもしれない。そうだとすると、ケイが体を人間らしくすることは、同時にセクサロイドの体に近づくことも意味することになる。きっと、ケイ自身もそのことを気にしていて、それをタツオに指摘されたがために、腕をつかむくらいに怒ったのだ。
+　ケイの体は、可能な限り人間に近いパーツで構成されている。その点は、セクサロイドも同じであり、もしかすると同一のパーツが使われているかもしれない。そうだとすると、ケイが体を人間らしくすることは、同時にセクサロイドの体に近づくことも意味する。きっと、ケイ自身もそのことを気にしていて、それをタツオに指摘されたがために、腕をつかむくらいに怒ったのだ……。
 
-　――そんなことをぼんやり考えていると、現実世界の方で何か音がするのを感じた。ぼくは、ゲームを止めてヘッドセットを外す。すると、ベッドを囲むカーテンに影がうつっていた。誰かがそこにいる。
+　そんなことをぼんやり考えていると、現実世界の方で何か音がするのを感じた。ぼくは、ゲームを止めてヘッドセットを外す。すると、ベッドを囲むカーテンに影がうつっていた。誰かがそこにいる。
 
 「開けていい？」聞き間違えるはずがない。ケイの合成音声の声だ。
 
@@ -14,11 +14,9 @@
 
 　ケイがカーテンを開ける。逆光のせいだと思うけれど、その表情は心なしか暗くみえた。
 
-「きみがここに来るなんて思ってなかったから、びっくりした。学校は？」ぼくは、思ったことをそのままいった。
+「きみが来るなんて思ってなかったから、びっくりした。学校は？」ぼくは、思ったことをそのままいった。
 
-「もう学校に行くことはない」ケイが首を振りながらいう。
-
-　頭の片隅にその可能性もあるかもしれないと思っていたので、意外と驚きはなかった。
+「もう学校に行くことはない」ケイが首を振りながらいう。意外と驚きはなかった。
 
 「……昨日のことがあったから？」とぼくがたずねる。
 「そう」
@@ -30,23 +28,25 @@
 
 　彼女の言うことはもっともだった。いくら彼女に非はないといっても、サイボーグが一般の学校に通うことの是非が問われるのは間違いなかった。ぼくは、唇を噛む。彼女を説得しようと思ったけれど、うまい言葉が見つからなかった。それに、彼女のことだ。きっと一度決めたことは貫き通すだろう。
 
-「……どうして、ぼくにいろいろと話してくれるの？」これが最後の機会かもしれないと思って、ぼくはたずねた。
+　彼女がもう学校へ行かないのなら、これが彼女と会う最後の機会になる。そう思って、ぼくはずっと気になっていたことをたずねた。
 
-　それを聞くと、彼女は微笑んだ。その質問を予期していたようだった。
+「……どうして、ぼくにいろいろと話してくれるの？」
 
-「理由は二つ。一つは、きみがサイボーグになりたいと言っているという話を聞いて、興味を持ったから」
-「どこでその話を聞いたか、いまも話す気はない？」二つ目の理由も気になったけど、まずはそこからきくことにした。一度は諦めたものの、やっぱり気になったのだ。もう聞く機会がないかもしれないと思うと、なおさらだった。
+　それを聞くと、彼女はうなずいた。その質問を予期していたようだった。
+
+「理由は二つ。一つは、きみがサイボーグになりたいと言っているという話を聞いたから」
+「どこでその話を聞いたか、いまも話す気はない？」二つ目の理由も気になったけど、まずはそこからきくことにした。あの時は別にいいと思ったけど、やっぱり気になったのだ。もう聞く機会がないかもしれないと思うと、なおさらだった。
 
 「実は、ずっと前に医者がぽろっとこぼしたの。サイボーグになりたがっている同じ年頃の患者がいるって」と彼女は話し始めた。
 「はじめて聞いたときは、耳を疑った。この体の大変さを何も知らないくせにって怒りさえした。その病院に同年代の患者は多くなかったし、すぐにきみだとわかった。――そう、入学前からわたしはキミのことを知っていた」
 
-　それを聞いて、昔複数の病気を併発して大きな病院に入ったときのことを思い出した。その病院ではサイボーグ化も行っていて、担当の医者に自分もサイボーグにしてくれと何度も頼んだのだった。
+　それを聞いて、複数の病気を併発して大きな病院に入ったときのことを思い出した。その病院ではサイボーグ化も行っていて、担当の医者に自分もサイボーグにしてくれと何度も頼んだのだった。
 
-「――もう一つの理由は？」とぼくは聞いた。無神経にサイボーグになりたいと言っていたのが恥ずかしくて、あまりその話はしたくなかった。
+「――もう一つの理由は？」とぼくは聞いた。
 
-「もう一つは、ミノルくんとうまくやっていたこと。正直なところ、同じクラスになるまで、きみのことはすっかり忘れていた。顔と名前を見て思い出したんだけど、それだけだったらわたしから話しかけようとはることはなかったと思う。きみが、ミノルくんと親友だという話を聞いて、話してみることにした」
+「もう一つは、ミノルくんとうまくやっていたから。正直なところ、同じクラスになるまで、きみのことはすっかり忘れていた。顔と名前を見て思い出したんだけど、それだけだったらわたしから話しかけることはなかったと思う。きみが、ミノルくんと親友だという話を聞いて、興味を持った」
 
-「どうして、そこでミノルが出てくるの？」ぼくは眉をひそめた。
+「どうして、そこでミノルが出てくるの？」ぼくは眉をひそめる。
 
 「それは、彼も、わたしと同じで特別な体を持っていたから。そういう特殊な事情のある人と親友になるのは、きみが思っているほど簡単じゃない。きみなら、わたしの体を意識せずに接してくれると思ったの」
 
@@ -56,17 +56,13 @@
 
 「また会えるかな」
 
-「それはわからない」彼女はきっぱりといった。連絡先を聞こうか、と思ったけれど、断られるのが目に見えたのでやめた。
+「それはわからない」彼女はきっぱりといった。ぼくは、連絡先を聞こうかと思ったけれど、断られるのが目に見えたのでやめた。
 
-　彼女が、カーテンに手をかける。
-
-「もう行くの」ぼくはきいた。もう会うことがないかもしれないと思うと名残惜しくて、引き止める言葉を探す。
-「今日は、どうしてきてくれたの」
-
-　そうたずねると、彼女はいたずらっぽく笑った。
+　彼女が、再びカーテンに手をかけて、帰ろうとする。もう会うことがないかもしれないと思うと名残惜しくて、引き止める言葉を探す。
+「今日は、どうしてきてくれたの」そうたずねると、彼女はふっと笑った。
 「クラスメイトのお見舞いにくるのに、理由が必要？」
 
-　思いもよらない返事にぼくも笑う。
-「それもそうか。今日は来てくれてありがとう」
+　たしかに、とぼくも笑った。
+「ごめん、変なこと聞いて。来てくれてありがとう」
 
 「さようなら」そういって彼女は去っていった。
