--- a/_drafts/02_帰り道.md
+++ b/_drafts/02_帰り道.md
@@ -18,7 +18,7 @@
 
 　しかし、現実のサイボーグはそんなに強くない。身体機能を代替できるといっても、ほとんどはかろうじて日常生活が送れるという段階だ。ましてや、人間の能力を完全に上回るなんてことはありえない。
 
-「この弱い体もいやだけど、{現代|いま}のレベルのサイボーグとなると、それはそれで大変そうだな……」
+「病気になるのもいやだけど、{現代|いま}のレベルのサイボーグとなると、それはそれで大変そうだな……」
 
 　そう言いながら、ぼくはケイのことを思い浮かべる。彼女にとっては、椅子に座ることも、階段を上り下りすることも、人と会話することも、実はとても大変なことのはずだ。それでも、今日一日、彼女は誰の助けも借りなかった。人工皮膚の表情からは何も読み取れなかったけれど、かなり無理をしていたに違いない。にもかかわらず、ちょっかいをかけてきた生徒を撃退するなんてことをやってのけたのだ。改めて、すごいな、と思った。サイボーグになれば、あんなふうに強くなれるのだろうか。
 
