--- a/_drafts/03_体育見学.md
+++ b/_drafts/03_体育見学.md
@@ -6,15 +6,15 @@
 
 　授業がはじまっても、彼女に特別な配慮がなされるということはほとんどなかった。彼女は、当てられれば質問に答えるし、黒板に回答も書きに行く。先生たちも、意識的に彼女を特別扱いしないようにしているようだった。彼女が思ったより普通だということがわかると、何人かは彼女に話しかけるようになった。毅然とした態度は第一印象のままだったけれど、クラスメイトと話す気がないということはないみたいだ。ただ、教室移動なんかのときに、ある生徒が気遣って教科書を持とうとしても、彼女がそれを受け入れることはなかった。また、彼女から他の誰かに話しかけるということもなかった。
 
-　昼休みに、彼女は教室から姿を消す。あとをつけたというクラスメイトの話によると、職員室の横にある生徒の立ち入りが禁止された部屋の中へ入っていったとのことだった。その部屋は、外から中の様子がわからないようになっている。その生徒は、さらに先生の目を盗んで、ドアの隙間からのぞき見しようとしたらしいが、鍵がかかってできなかったらしい。彼女は、そこで*充電*しているのではないか、という噂だった。
+　昼休みに、彼女は教室から姿を消す。あとをつけたというクラスメイトの話によると、職員室の横にある生徒の立ち入りが禁止された部屋の中へ入っていったとのことだった。その部屋は、外から中の様子がわからないようになっている。その生徒は、さらに先生の目を盗んで、ドアの隙間からのぞき見しようとしたらしいが、鍵がかかっていてできなかったらしい。彼女は、そこで*充電*しているのではないか、という噂だった。
 
-　まだ謎の多い彼女について、他にもさまざまな憶測がなされ、根も葉もない噂も流れた。彼女はやはりロボットで、ここにいるのは、ロボットを学校に通わせる社会実験のためだという話や、彼女は国の秘密機関の被検体で、一般には知られていない特殊なパーツが使われているといった話だ。じっさい、彼女の体は、見たことないほどリアルで繊細だった。他にも、実は何十歳も年上のばあさんで、それがばれないようにサイボーグになったのだというものもある。誹謗中傷に近いものもあったが、その多くは、あの事件を根に持ったタツオがクラスの外で流したものらしかった。
+　まだ謎の多い彼女について、他にもさまざまな憶測がなされ、根も葉もない噂も流れた。彼女はやはりロボットで、ここにいるのは、ロボットを学校に通わせる社会実験のためだという話や、彼女はある秘密機関の被検体で、一般には知られていない特殊なパーツが使われているといった話だ。じっさい、彼女の体は、見たことないほどリアルで繊細だった。他にも、実は何十歳も年上のばあさんで、それを知られたくなくてサイボーグになったのだというものもある。誹謗中傷に近いものもあったが、その多くは、あの事件を根に持ったタツオがクラスの外で流したものらしかった。
 
 　そういった話の中で、唯一信憑性があるのは、彼女が六年前の航空機事故の被害者というものだった。その根拠は、死亡者リストに彼女の両親とおぼしき男女の名前があったことだ。二人とも彼女と同じ姓で、それは決してよくある姓というわけではなかった。記事には、当時まだ実験導入だった緊急生命維持装置が用いられたという記述もあった。それは、サイボーグの中核となる技術を応用したものだった。
 
 　普段から彼女を気遣っている生徒――入学式の朝、席について教えてくれた髪の長い子だ――が、一度だけ、ごくごく遠まわしに、彼女がサイボーグになった経緯を聞こうとしたことがあった。しかし、ケイがきっぱりと「話したくない」といってその話は終わった。それ以来、誰も彼女にそれを聞くことはなかった。
 
-　――ぼくはというと、四月が終わろうという時になっても、あまりクラスになじめずにいた。席の場所の悪さと、気弱な性格があいまって、まだ大半のクラスメイトと話せていない。中学の時、休みがちで迷惑をかけた経験から、部活にも入らなかった。休み時間は基本的に一人で過ごしている。また、体調もだんだんと悪くなってきていた。
+　ぼくはというと、四月が終わろうという時になっても、あまりクラスになじめずにいた。席の場所の悪さと、気弱な性格があいまって、まだ大半のクラスメイトと話せていない。中学の時、休みがちで迷惑をかけた経験から、部活にも入らなかった。休み時間は基本的に一人で過ごしている。また、体調もだんだんと悪くなってきていた。
 
 　その日、ぼくは体育の授業を見学していた。クラスメイトがハードル走の練習をしているのを、運動場の隅の木陰に座ってぼんやり眺めているときだった。
 「きみ、サイボーグになりたいの」と、横から突然声がした。
@@ -22,7 +22,7 @@
 　振り向くと、そこにケイが立っていた。彼女はいつも体育を見学している。サイボーグが生身の体の生徒と一緒に運動するというのは難しいのだろう。ぼくは体操服に着替えていたが、彼女は制服のままだった。
 
 「なんで知ってるの」突然話しかけられたこともそうだけれど、何より質問の内容に驚いた。
-「そう言うってことは、本当になりたいんだ」ケイがいう。
+「そう言うってことは、本当になりたいんだ」
 
 　ミノルが話したんだろうか、ということが頭をよぎるが、ミノルと彼女に接点があるとは考えにくかった。
 「一応言っておくと、ミノルくんから聞いたわけじゃない。だけど、誰から聞いたかいうつもりはない」ケイが、ぼくの考えを先読みしたように付け加えた。彼女の口からミノルの名前が出たことで、ぼくはいっそう混乱する。
@@ -59,7 +59,7 @@
 
 「そうね……。たとえば、サイボーグの体でようやく歩けるようになったころ、こんなことがあった。一人で病院やリハビリ施設を歩いているとき、目の前にゴミを投げられたの。それも、なんの害もなさそうな老人や子どもが、平気な顔でそうしていた。まだうまく喋れなかった私は、なんでそんなことされるのかわからなくて、怖くて、ただ立ちすくむしかなかった。あとからわかったんだけど、彼らはわたしを掃除ロボットだと思っていたんだって。当時そういう場所にいるロボットといえば掃除ロボットくらいだったし、わたしも今よりずっと機械らしい見た目だった。彼らは、ロボットが掃除しやすいように、親切心でゴミをわたしの前に投げていたわけ」
 
-　おかしいでしょ、というように彼女は微笑みの表情をつくる。ぼくはとても笑う気にはなれなかった。
+　おかしいでしょ、というように彼女は自虐的な微笑の表情をつくる。ぼくはとても笑う気にはなれなかった。
 
 「それを知ったとき、最初はやるせなかった。タツオみたいに悪意があれば怒ることも簡単だけど、その時は怒りをどこに向ければいいのかわからなかった……」
 
@@ -70,22 +70,23 @@
 「その後も、そういう出来事は何度もあった。そうやって、何度も何度もロボットに間違えられるうち、やるせなさや怒りはどこかへいって、ある疑問が生まれた。わたしは本当に人間なのかって。わたしは自分を人間だと思い込んでるロボットかもしれないって。一度そう考え始めると、そうとしか思えなくなった。鏡を見ても、そこにいるのは機械仕掛けの人形でしかない。胸に手を当てても、心音を感じることはない。生身の心臓もなければ、鼓動を感じる皮膚もない。医者に頼んで、外部カメラの遠隔視野から自分の生身の部分を見せてもらったこともある。でも、その*目*は、わたし自身の目じゃない。その目で見たものが本当かも、その体が本当にわたしのものかもわからない。自分が何者かわからなくなって、生きている心地がしなかった……」
 
 　彼女の言葉を聞いて、ぼくは知らず知らずのうち自分の胸に手を当てていた。そこには、たしかに心臓があり、その鼓動を感じることができた。しかし、彼女はそれを感じることができないのだ。その感覚を想像しようとしたけれど、うまくいかない。自分が人間であるなんて、あまりに当たり前すぎて、そうでない可能性なんて考えることができなかった。
-「そこから、どうやってきみは今のようになったの？」そんな頃があったなんて、眼の前の彼女からは想像できなかった。
+「そこから、どうやってきみは今のようになったの？」そんな頃があったなんて、目の前の彼女からは想像できなかった。
 
-「自分が人間であるという根拠を探して、医者に聞きまわったり、いろいろな本を読んだりした。無我夢中で自分が人間だという証拠を調べ回った。でも、そうやってわかったのは、そもそも『{人間|パーソン}』の定義が曖昧だということだった。それに気づいたとき、わたしは、人間であることの定義を、わたしの外側ではなく、わたし自身の内側に求めることにした。つまり、*わたしは*、*わたし自身が人間だと思うから*、*人間である*。そう考えることにしたの。それ以来、わたしは自分が人間であるということを強く意識してきた。それが、今のわたしを形作ってる。わたしに強さがあるとすれば、それはそこからくるものだと思う」
+「自分が人間であるという根拠を探して、医者に聞きまわったり、いろいろな本を読んだりした。無我夢中で自分が人間だという証拠を調べ回った。でも、そうやってわかったのは、そもそも『{人間|パーソン}』の定義が曖昧だということだった。――それに気づいたとき、わたしは、人間であることの定義を、わたしの外側ではなく、わたし自身の内側に求めることにした。つまり、*わたしは*、*わたし自身が人間だと思うから*、*人間である*。そう考えることにしたの。それ以来、わたしは自分が人間であるということを強く意識してきた。それが、今のわたしを形作ってる。わたしに強さがあるとすれば、それはそこからくるものだと思う」
 
 　彼女は、そういってぼくの方を見た。微動だにしないその表情は、何かを読み取るにはあまりに難しかった。
 
-「きみの強さは、その体によるものじゃなくて、きみ自身の意識や心からくるものだったんだね……。ぼくははじめ、病弱な体を変えるために、サイボーグになりたいと思った。でも、今はそうじゃない。きみのように強くなるために、サイボーグになりたいと思っていたんだ。それは、ぼくの体の問題じゃなく、心の問題だった。心の弱さを体の弱さのせいにしていたのかもしれない……」
+「きみの強さは、その体によるものじゃなくて、きみ自身の意識や心からくるものだったんだね……」ぼくは、彼女の言葉を咀嚼しようとする。
+「ぼくははじめ、病弱な体を変えるために、サイボーグになりたいと思った。でも、今はそうじゃない。きみのように強くなるために、サイボーグになりたいと思っていたんだ。それは、ぼくの体の問題じゃなく、心の問題だった。心の弱さを体の弱さのせいにしていたのかもしれない……」
 
 　ぼくがそう言うと、彼女がかぶりを振りながら、さえぎるようにいった。
 
 「それは違う。心の問題と体の問題は、そんな簡単に切り分けられるものじゃない。わたしは、わたしが人間であると強く意識するために、体の方も変えてきた。体の部品を交換する時は、機能性を犠牲にしてでも、できるだけ見た目や感覚が生身の体に近いものを選ぶようにした。そうしないと、自分が人間であるという意識が揺らぎそうだったから。きみは、心の問題を体の問題にすりかえることが間違いだと思っているようだけれど、そんなことない」
 
-　あらためて彼女の体を見る。はじめてみた時、ぼくは一瞬彼女のを何の変哲もない生徒だと思ったことを思い出した。彼女がさらに言葉を続けた。
+　ぼくは、あらためて彼女の体を見た。はじめてみた時、ぼくは一瞬彼女のを何の変哲もない生徒だと思ったことを思い出した。彼女がさらに言葉を続けた。
 
-「体を変えることで心を変えようとするのは何も珍しい話じゃない。サイボーグはちょっと極端だけれど、たとえば化粧や筋トレもなんかそう。自分に自信をもつため――心を強くするため――に、化粧や筋トレをしている人は少なくない」
+「体を変えることで心を変えようとするのは何も珍しい話じゃない。サイボーグはちょっと極端だけれど、たとえば化粧や筋トレによる肉体改造なんかもそう。自分に自信をもつため――心を強くするため――に、そういったことをしている人は少なくない」
 
-「きみは、ぼくにサイボーグになるべきだと言いたいの」ぼくがそういうと、彼女はまた首を振った。
+「きみは、ぼくにサイボーグになるべきだと言いたいの」彼女が何を言いたいのかわからなかった。
 
-「それは、きみ自身が考えること」
+「それは、きみ自身が考えること」彼女はまた首を振った。
