--- a/_drafts/04_VR空間.md
+++ b/_drafts/04_VR空間.md
@@ -1,6 +1,6 @@
 　次の日、ぼくは熱を出して学校を休んだ。そして、その次の日にはさらに悪化して、結局いつものように入院することになった。
 
-　高熱にうなされながら、ケイに言われたことを考えた。心と体は密接につながっている。たしかに、こうして体が弱っていると、心も弱気になってくる。ぼくはまた、自分の体に嫌気がさしていた。いまさらサイボーグになりたいなんて言わないけれど、やっぱりこの不自由な体を、丈夫で健康な体に取り替えたいと思う。そうすれば、心も強くなれるだろうか？　いや、逆かもしれない。心を強く持たないと、体だって強くならないのかもしれない……。
+　高熱にうなされながら、ケイに言われたことを考えた。心と体は密接につながっている。たしかに、こうして体が弱っていると、心も弱気になってくる。ぼくはまた、以前のように自分の体に嫌気がさしていた。いまさらサイボーグになりたいなんて言わないけれど、やっぱりこの不自由な体を、丈夫で健康な体に取り替えたいと思う。そうすれば、心も強くなれるだろうか？　いや、逆かもしれない。心を強く持たないと、体だって強くならないのかもしれない……。
 
 　そんなとりとめのないことを、寝込んでいるあいだぐるぐると考え続けていた。
 
@@ -8,7 +8,7 @@
 “もう大丈夫。明日には退院予定”とメッセージを送る。すると、すぐに返信が届いた。
 “じゃ、今日の夕方、久しぶりにあっちで会おう”
 
-　ぼくは、オーケーの絵文字を返す。ちょうど、ミノルに聞きたいこともあった。
+　ぼくは、オーケーの絵文字を返す。*ちょうど*、*ミノルに聞きたいこともあった*。
 
 　夕方、ぼくはミノルに会う準備をする。新しいチャットルームを作成して、ミノルにアドレスを送った。そして、手袋式のハンドコントローラをつけ、ＶＲヘッドセットを装着して、ミノルが来るのを待つ。病室にうんざりしていたぼくは、ＶＲチャットルームの内装を、陽光が入るおしゃれなカフェに設定した。店員や他の客もいるが、それらはすべてＮＰＣだ。
 
@@ -20,46 +20,53 @@
 
 　それからは、普段一緒に登校するときと同じように、学校であったことや、最近見たビデオ、ハマってるゲームの話なんかをした。ＶＲチャットの便利な点は、視覚情報をその場で楽に共有できることだ。現実だとモバイルデバイスの小さいディスプレイを一緒にのぞくことになるが、ここでは好きなサイズの画面を空間の任意の場所に広げることができる。
 
-　一通りのことを話し終えて、次の話題を探すための間が生まれた。ぼくは、聞こうと思っていた質問をすることを考える。でも、どうやってその話を切り出せばいいかわからなかった。それは、僕が普段避けている話題だったし、下手に話せばミノルをを傷つけることになるかもしれない。いつもなら何も考えずに話せるのに、言葉が頭の中で渦を巻いて形にならなかった。現実世界でぼくはつばを飲み込む。ハンドコントローラの手汗が気持ち悪さが無性に気になった。
+　一通りのことを話し終えて、次の話題を探すための間が生まれた。ぼくは、聞こうと思っていた質問をすることを考える。でも、どうやってその話を切り出せばいいかわからなかった。それは、僕が普段避けている話題だったし、下手に話せばミノルをを傷つけることになるかもしれなかった。いつもなら何も考えずに話せるのに、言葉が頭の中で渦を巻いて形にならない。現実世界でぼくはつばを飲み込む。ハンドコントローラの手汗が気持ち悪さが無性に気になった。
 
-「……まだ調子悪い？」ミノルがいった。
+「……まだ調子悪い？」ミノルのアバターが首をかしげる。アバターは、声の調子に合わせて、自動で動きをつける。プリセットから動作を選んで、意図的に動かすこともできた。
 「いや、そんなことないよ。どうして？」現実世界の様子を見抜かれて驚いたぼくは、反射的に否定した。元気に聞こえるように努めたけれど、かえってわざとらしかったかもしれない。
-「どこかうわの空な感じだし、なんとなく。こういう時、現実だったら顔を見ればわかるんだけど、ＶＲアバターは無表情だからなあ……」そう言いながらミノルのアバターが、両手を広げて頭の高さまで上げ、唇を結び眉間にシワを寄せて顔を振った。〈困った・お手上げ〉のジェスチャーだ。言ってる内容とのギャップに、ぼくは笑った。ミノルもぼくの反応を見て笑う。
+「なんとなく、うわの空な感じだったから。こういう時、現実だったら顔を見ればわかるんだけど、ＶＲアバターは無表情だからなあ……」そう言いながらミノルのアバターが、両手を広げて頭の高さまで上げ、唇を結び眉間にシワを寄せて顔を振った。〈困った・お手上げ〉のジェスチャーだ。言ってる内容とのギャップに、ぼくは笑った。ミノルもぼくの反応を見て笑う。
 
-「実は、ミノルに聞きたいことがあるんだ……」緊張が途切れると、自然と言葉がでてきた。
+「実は、ミノルに聞きたいことがあるんだ……」緊張が途切れると、自然と言葉が出てきた。
 「なに？」
 
 　ぼくは、一度深呼吸した。その音が聞こえたのだろう。ミノルがインターネットの向こうで身構えるのが分かる。
 
-「ミノルはさ、体を変えたいと思ったことある？」
+「ミノルはさ、自分の体を変えたいと思ったことある？」
 
+<!-- FIXME: 順番変える -->
 　それは、高熱でうなされている時に頭をよぎったことだった。ケイのいうように、心と体が密接に関わっているなら、体の性と心の性が異なるミノルはどうなのだろう。幼い頃は、ミノルも女の子らしい格好をさせられることがあった。そんな時、彼はきまって弱々しく黙り込んでしまった。彼の親の話によると、その格好になるまでは暴れまわって徹底的に抵抗していたらしい。化粧や筋トレがそうだというなら、服だって体の延長なのだ。それは心に影響する。そう考えたとき、ある疑問が頭を離れなくなった。もしかするとミノルも――服だけでなく――体を変えたいとずっと悩んでいたのではないだろうか。そう思うと、長年一緒に過ごしてきたのに、ミノルのことを何も知らない気がした。
 
 　ミノルが、ふーっと息を吐く音が聞こえた。そしていつもの調子で続けた。
 
-「なんだ、そんなことか。何を聞かれるのかと思って一瞬ドキドキした」
+「なんだ、そんなことか。あらたまって何を聞かれるのか、一瞬ドキドキした」
 
 　その声を聞いて、ぼくはほっと胸をなでおろす。怒られることや拒絶されることよりも、ミノルが無理して話そうとするのが一番怖かった。ミノルが落ち着いた声で質問に答える。
 
 「あるよ、何度も。小さい頃なんかは、いつか体が勝手に変わると思ってた。この体は、自分の本当の体じゃない。だから、そのうち男の体へと自然に変わっていくんだって。でも、当然そんなことはなかった……」
 
-「同じとは思わないけど、ぼくも小さい頃、大きくなれば体が良くなると思ってた……」当時を思い出して、ぼくがいった。
+「そういえば、ぼくも小さい頃、大きくなれば体が良くなると思ってた……」似た経験を思い出して、ぼくがいった。
 
-「うん。そんなだったから、二次性徴がきたときは絶望だった。それに気づいた時ほど、自分の体が嫌だったことはない。それで、――ヒロトに話したことはなかったけど――中学に入った頃から二次性徴を抑制する治療を始めたんだ。親や医者と相談して、もうすぐホルモン療法も始めることになってる。――体を変えたいって思うだけじゃなく、ぼくはすでに自分の体を変えつつあるんだ。サイボーグみたいに外科的なものじゃないけどね」
+「うん。そんなだったから、二次性徴がきたときは絶望だった。それに気づいた時ほど、自分の体が嫌だったことはない。それで――ヒロトに話したことはなかったけど――中学に入った頃から二次性徴を抑制する治療を始めたんだ。親や医者と相談して、もうすぐホルモン療法も始めることになってる。――体を変えたいって思うだけじゃなく、ぼくはすでに自分の体を変えつつあるんだ。サイボーグみたいに外科的なものじゃないけどね」
 
-　ショックだった。ミノルがそんな悩みを持っていたことも、そんな治療をはじめていたことも、何も気づいていなかった。本当にミノルのことを何も知らなかったのだ。たしかに、ミノルの体は、同年代の女性に比べれば、胸も出ていないし体の丸みもない。ただ、ミノルが男であることがあまりに当たり前で、体が女性であることは知ってはいても、そういうものかと思っていた。ちょっと考えればそんなはずないのに、今まで思いもよらなかった。
+　ミノルはあっさりとそう言ったけれど、その内容はぼくにとってショックだった。ミノルがそんな悩みを持っていたことも、そんな治療をしていたことも、何も気づいていなかった。本当にミノルのことを何も知らなかったのだ。たしかに、ミノルの体は、同年代の女性に比べれば、胸も出ていないし体の丸みもない。ただ、ミノルが男であることがあまりに当たり前で、体が女性であることは知ってはいても、そういうものかと思っていた。ちょっと考えればそんなはずないのに、今まで思いもよらなかった。
 「知らなかった……」ぼくは、言葉を絞り出した。
 
 「知らなくて当然さ。学校の友達には絶対に知られたくなかったし、知られないようにしてた。特に、ヒロトには気づかれないよう、かなり気を使ってた」
 
 「そうだったんだ……」自分の鈍さがうとましかった。
 
-「――でも、話せてすっきりしたよ。昔は絶対知られたくないと思ってたけど、最近は何か隠し事してるみたいでいやだったんだ。聞いてくれてよかった……。今さらこんな事言うのもなんだけど、同性の友達として変わらず接してくれるヒロトには感謝してる……」
+「――でも、話せてすっきりしたよ」ぼくの暗い声をきいて気を使ったのか、ミノルがいった。
+「昔は絶対知られたくないと思ってたけど、最近は何か隠し事してるみたいでいやだったんだ。聞いてくれてよかった……。今さらこんな事言うのもなんだけど、同性の友達として変わらず接してくれるヒロトには感謝してる……」
 
-　ミノルの声はだんだん小さくなって、最後は少し震えていた。やっぱり、話しにくいことに違いなかったのだ。はじめは平静を装っていたけど、話し終えて少し気が緩んだのだろう。ぼくは、今までのように、ミノルの変化に気づかないふりをした。
-「うん……」
+　ミノルの声はだんだん小さくなって、最後は少し震えていた。やっぱり、話しにくいことには違いなかったのだ。はじめは平静を装っていたけど、話し終えて少し気が緩んだのだろう。
 
-「――でも、どうして急にそんなこと聞こうと思ったの？」ミノルが口を開く。その声は、もう震えていなかった。
+「うん……」ぼくはそう言って、自分の声に驚いた。ミノルと同じように、ぼくの声も震えていた。
+
+　これまで、こういったことを聞かなかったのは、ミノルに嫌われるのが怖かったからだ。しかし、同時に、友達としてそういう話を聞けないのも嫌で、そのことがずっと胸に引っかかっていた。いま、その引っかかりが取ることができた。声の震えは、その安堵感からくるものだった。もしかすると、ミノルも同じ思いだったのかもしれない。
+
+　少しのあいだ、ぼくらは二人とも押し黙った。それは、必要な沈黙だった。
+
+「――でも、どうして急にそんなこと聞こうと思ったの？」ミノルが沈黙をやぶる。その声は、もう震えていなかった。ぼくも切り替えるように努める。
 
 「ケイに言われたことがきっかけだったんだ……」ぼくはそういって、体育見学をしている時に彼女と話したことをミノルに伝えた。
 
@@ -68,7 +75,7 @@
 
 　そう言ってミノルは、その日学校で起きたケイにまつわる事件について話した。それは、ケイがクラスメイトに骨折の重傷を負わせたというものだった。
 
-　ミノルが聞いた話によると、それは、休み時間に起こった。はじめは、廊下でタツオとケイが何か言い合いをしていたらしい。内容は定かではないけれど、近くにいた生徒が、「セクサロイド」という単語を聞いたそうだ。その言葉を聞くと、ケイがタツオの腕をつかんだ。驚いたタツオがケイを突き飛ばすと、そこに運悪く他の生徒がいた。ケイが、その生徒の上に重なる形で倒れ込んだ。サイボーグの重量というのはわからないけれど、普通の人間よりずっと重いにちがいない。下敷きになった生徒は悲鳴を上げた。それを聞いて、フロア中から人が集まってきた。ケイが他の助けを借りて起き上がると、その生徒はぐったりしていて、すぐに病院に運ばれた。
+　ミノルが聞いた話によると、それは、休み時間に起こった。はじめは、廊下でタツオとケイが何か言い合いをしていたらしい。内容は定かではないけれど、近くにいた生徒が、「セクサロイド」という単語を聞いたそうだ。その言葉を聞くと、ケイがタツオの腕をつかんだ。驚いたタツオがケイを突き飛ばすと、そこに運悪く他の生徒がいた。ケイが、その生徒の上に重なる形で倒れ込んだ。サイボーグの重量というのはわからないけれど、普通の人間よりずっと重いにちがいない。下敷きになった生徒は悲鳴を上げた。それを聞いて、フロア中から人が集まってきた。ケイが集まった人たちの助けを借りて起き上がると、その生徒はぐったりしていて、すぐに病院に運ばれた。
 
 「わるいのは、タツオじゃないか」話を聞いてすぐに、ぼくがいった。
-「ぼくもそうだと思う。でも、彼女がサイボーグじゃなかったら、そんな大けがにはならなかった。きっと、サイボーグとそうでない生徒が一緒に授業を受けることを、問題にする人が出てくる……」
+「ぼくもそうだと思う。でも、彼女がサイボーグじゃなかったら、そんな大けがにはならなかった。きっと、サイボーグとそうでない生徒が一緒に授業を受けることを、問題にする人が出てくる……」ミノルのアバターが首を振りながらそういった。
