--- a/_drafts/05_病室にて.md
+++ b/_drafts/05_病室にて.md
@@ -2,13 +2,13 @@
 
 　昼下がり、時間をつぶすためにベッドでＶＲゲームをしていたが、あまり集中できず、いつのまにかまた事件の事を考えていた。
 
-　タツオがいったという「セクサロイド」という言葉は、たしかに、人間らしい見た目を求めるケイにとってはかんに障るものだっただろう。セクサロイドは、人間との性行為を目的に作られたロボットの総称だ。ロボットの普及とともに、セクサロイドを売りにした風俗店も一気に広まった。ふつう、人型のロボットは、ひと目でロボットと分かるような見た目をしている。人間らしい見た目が必要になることはほとんどないし、まぎらわしいだけだからだ。しかし、セクサロイドはそうではない。セクサロイドには、人間らしい見た目や触感が求められる。そのため――皮肉なことに――セクサロイドが最も人間に近いロボットといわれていた。
+　タツオがいったという「セクサロイド」という言葉は、ケイを侮辱するために使われたに違いない。セクサロイドは、人間との性行為を目的に作られたロボットの総称だ。ロボットの普及とともに、セクサロイドを売りにした風俗店も一気に広まった。ふつう、人型のロボットは、ひと目でロボットと分かるような見た目をしている。人間らしい見た目が必要になることはまずないし、まぎらわしいだけだからだ。しかし、セクサロイドはそうではない。セクサロイドには、人間らしい見た目や触感が求められる。そのため――皮肉なことに――セクサロイドが最も人間に近いロボットといわれていた。
 
 　ケイの体は、可能な限り人間に近いパーツで構成されている。その点は、セクサロイドも同じであり、もしかすると同一のパーツが使われているかもしれない。そうだとすると、ケイが体を人間らしくすることは、同時にセクサロイドの体に近づくことも意味する。きっと、ケイ自身もそのことを気にしていて、それをタツオに指摘されたがために、腕をつかむくらいに怒ったのだ……。
 
-　そんなことをぼんやり考えていると、現実世界の方で何か音がするのを感じた。ぼくは、ゲームを止めてヘッドセットを外す。すると、ベッドを囲むカーテンに影がうつっていた。誰かがそこにいる。
+　そんなことをぼんやり考えていると、現実世界の方で何か音がするのを感じた。ぼくは、ゲームを止めてヘッドセットを外す。すると、ベッドを囲むカーテンに人影がうつっていた。カーテンの向こうから声がする。
 
-「開けていい？」聞き間違えるはずがない。ケイの合成音声の声だ。
+「開けてもいい？」聞き間違えるはずがない。ケイの合成音声の声だ。
 
 「いいよ」そう言いながら、ぼくはあわててＶＲセットを布団の中に隠す。
 
@@ -16,15 +16,15 @@
 
 「きみが来るなんて思ってなかったから、びっくりした。学校は？」ぼくは、思ったことをそのままいった。
 
-「もう学校に行くことはない」ケイが首を振りながらいう。意外と驚きはなかった。
+「もう学校に行くことはない」ケイが首を振りながらいう。頭の片隅でその可能性も考えていたから、意外と驚きはなかった。
 
 「……昨日のことがあったから？」とぼくがたずねる。
-「そう」
+「そう。もう聞いたんだ」ケイがうなずいた。
 「わるいのは、どう考えてもタツオの方だ。なにも、きみが学校をやめなくても……」
 
 　僕がそう言うと、ケイがまた首を振った。
 
-「学校に通うことになったときから、何かあったらすぐにやめるって決めていたの。全身サイボーグはまだまだ珍しい。今の段階で、サイボーグが危険だという話が広まるのだけは、絶対に避けなければならない」
+「学校に通うことになったときから、何か問題を起こしたらすぐにやめるって決めていたの。全身サイボーグはまだまだ珍しい。今の段階で、サイボーグが危険だという話が広まるのだけは、絶対に避けなければならない」
 
 　彼女の言うことはもっともだった。いくら彼女に非はないといっても、サイボーグが一般の学校に通うことの是非が問われるのは間違いなかった。ぼくは、唇を噛む。彼女を説得しようと思ったけれど、うまい言葉が見つからなかった。それに、彼女のことだ。きっと一度決めたことは貫き通すだろう。
 
@@ -35,24 +35,24 @@
 　それを聞くと、彼女はうなずいた。その質問を予期していたようだった。
 
 「理由は二つ。一つは、きみがサイボーグになりたいと言っているという話を聞いたから」
-「どこでその話を聞いたか、いまも話す気はない？」二つ目の理由も気になったけど、まずはそこからきくことにした。あの時は別にいいと思ったけど、やっぱり気になったのだ。もう聞く機会がないかもしれないと思うと、なおさらだった。
+「どこでその話を聞いたか、いまも話す気はない？」二つ目の理由も気になったけど、まずはそこからきくことにした。体育の授業で話したときは別にいいと思ったけど、やっぱり気になった。もう聞く機会がないかもしれないと思うと、なおさらだった。
 
 「実は、ずっと前に医者がぽろっとこぼしたの。サイボーグになりたがっている同じ年頃の患者がいるって」と彼女は話し始めた。
-「はじめて聞いたときは、耳を疑った。この体の大変さを何も知らないくせにって怒りさえした。その病院に同年代の患者は多くなかったし、すぐにきみだとわかった。――そう、入学前からわたしはキミのことを知っていた」
+「はじめて聞いたときは、耳を疑った。この体の大変さを何も知らないくせにって怒りもした。その病院に同年代の患者は多くなかったし、すぐにきみだとわかった。――そう、入学前からわたしはキミのことを知っていた」
 
-　それを聞いて、複数の病気を併発して大きな病院に入ったときのことを思い出した。その病院ではサイボーグ化も行っていて、担当の医者に自分もサイボーグにしてくれと何度も頼んだのだった。
+　それを聞いて、むかし、複数の病気を併発して大きな病院に入ったときのことを思い出した。その病院ではサイボーグ化も行っていて、担当の医者に自分もサイボーグにしてくれと何度も頼んだのだった。
 
 「――もう一つの理由は？」とぼくは聞いた。
 
-「もう一つは、ミノルくんとうまくやっていたから。正直なところ、同じクラスになるまで、きみのことはすっかり忘れていた。顔と名前を見て思い出したんだけど、それだけだったらわたしから話しかけることはなかったと思う。きみが、ミノルくんと親友だという話を聞いて、興味を持った」
+「もう一つは、ミノルくんとうまくやっていたから。正直なところ、同じクラスになるまで、きみのことはすっかり忘れていた。顔と名前を見て思い出したんだけど、その記憶だけだったら、わたしから話しかけることはなかったと思う。きみが、ミノルくんと親友だという話を聞いて、興味を持った」
 
 「どうして、そこでミノルが出てくるの？」ぼくは眉をひそめる。
 
-「それは、彼も、わたしと同じで特別な体を持っていたから。そういう特殊な事情のある人と親友になるのは、きみが思っているほど簡単じゃない。きみなら、わたしの体を意識せずに接してくれると思ったの」
+「それは、彼も、わたしと同じで特別な体を持っていたから。そういう特殊な事情のある人と親友になるのは、きみが思っているほど簡単じゃない。……きみなら、わたしの体を特別視しないと思った」
 
 「それは買いかぶりだよ……」そういって、ぼくは目をそらした。
 
-　彼女は、肯定も否定もしなかった。なんとなく居心地がわるくて、ぼくは話題を変える。
+　彼女は何も言わなかったが、目の端で微笑んでいるのを捉えた。なんとなく居心地がわるくて、ぼくは話題を変える。
 
 「また会えるかな」
 
@@ -63,6 +63,6 @@
 「クラスメイトのお見舞いにくるのに、理由が必要？」
 
 　たしかに、とぼくも笑った。
-「ごめん、変なこと聞いて。来てくれてありがとう」
+「来てくれてありがとう」
 
 「さようなら」そういって彼女は去っていった。
