--- a/_drafts/06_エピローグ.md
+++ b/_drafts/06_エピローグ.md
@@ -1,7 +1,9 @@
-　以上が、ぼくが彼女とクラスメイトだった1ヶ月の出来事だ。あの病室以来、ぼくは彼女に会っていない。
+　以上が、ぼくが彼女とクラスメイトだった1ヶ月の出来事だ。あれ以来、ぼくは彼女に会っていない。
 
-　数年前に一度だけ、彼女を探そうとしたことがある。しかし、なんの手がかりも得られなかった。学校は個人情報の一点張りで何も教えてくれない。当時の全身サイボーグなんて珍しかったから、インターネットを探せば何か出てくるだろうと思ったけれど、何も見つからなかった。あの時のクラスメイトにいたっては、彼女を覚えていないものまでいた。考えてみれば、両親のいないはずの彼女を送迎していのはいったい何者だったのだろう。車で南に30分のあたりで聞き込みをしたけれど、サイボーグを見たことがあるという人はいなかった。
+　数年前に一度だけ、彼女を探そうとしたことがある。けれど、なんの手がかりも得られなかった。学校は個人情報の一点張りで何も教えてくれない。当時は全身サイボーグなんて珍しかったから、インターネットを探せば何か出てくるだろうと思ったけれど、何も見つからなかった。あの時のクラスメイトにいたっては――驚いたことに――彼女を覚えていないものが多かった。彼女が住んでいるといっていた車で南に30分のあたりで聞き込みをしたけれど、サイボーグを見たことがあるという人はいなかった。考えてみれば、両親のいないはずの彼女を送迎していのはいったい何者だったのだろう。
 
 　何よりも不思議なのは、彼女の体に使われていたパーツが非常に高価なものだったことだ。あの頃はわからなかったけれど、今ならその価値がわかる。あれは、当時の最先端技術を結集したような体だった。秘密機関の被検体なんて噂があったけど、あながち間違いではなかったのかもしれない。
 
-　ぼくはというと、今は医師としてはたらいている。やっぱり自分の体のことを知りたかったというのが大きい。でも、最近は、ケイやミノルのような人たちの助けになりたいと思ってる。サイボーグ技術はいっそう進んで、今では自らの意思でサイボーグになるものもいる。けれど、まだまだサイボーグに対する偏見は根強く、道程は険しい。そうして壁にぶち当たるたびに考える。今のぼくをみて、ケイならなんていうだろうか、と。
+　ぼくはというと、今は医師として働いている。やっぱり自分の体のことを知って、なんとかしたかったというのが大きい。それに、ケイやミノルのような人たちの助けになりたいとも思った。サイボーグ技術はいっそう進んで、今では自らの意思でサイボーグになるものもいる。また、サイボーグは必ずしも無機的な体を指すわけではない。中には、ミノルのような人の助けになるものもある。けれど、まだまだサイボーグが社会に溶け込むには障害も多く、道のりは険しい。
+
+　ぼくは、何か壁にぶち当たるたび、ケイのことを考える。今のぼくをみて、彼女ならなんていうだろうか、と。
