--- a/_plots/05_病室にて.md
+++ b/_plots/05_病室にて.md
@@ -15,12 +15,34 @@
 
 ## 出来事
 
-ケイがヒロトに別れを告げる
-ふつうって難しい
+ケイがヒロトに別れを告げるくる
+ヒロト「明日になったら学校で会えるのに」
+ケイ「もう学校には行かない」
 
-お互い相手のことがわかってなかったことに気づく
+ヒロト「そんなことで」
+系は首を振る
+ケイ「怪我というのは、そんなことではすまされない。特に、私の場合は。このサイボーグ黎明期に、サイボーグが危険だといわれることは避けなければならない」
+「高校に通うと決めたときから決めてた」
+
+ヒロト「どうしてぼくに話してくれたの？」
+
+ケイ「理由は2つ。サイボーグになりたがっていた。
+医者がぽろっとこぼした。最初は何も知らないくせにと思った。
+同年代でその医者の患者は多くなかったし、すぐにきみだとわかった」
+
+「もう一つはミノルとうまくやっていたから。
+いくら理解が広まったといはいえ、特に思春期にはやっぱり難しい」
+ケイ「きみなら、ありのままの私を見てくれると思ったから。あまり意識せず接してくれると思ったから」
+「現に、君の口ぶりは意識していないようだった。
+
+ヒロト「そんなことない……」
+ケイ「人それぞれ適切な距離感というのがある」
+
+ヒロト「また会えるかな」
+ケイ「わからない」
+連絡先を聞いても断られることがわかった
+ケイ「さようなら」
 
 ## 留意点
 
-- 体が弱いからといって心まで弱くなる必要はない
 - 描写！！　書きすぎるな！！！
